translations for all pages

--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -394,5 +394,247 @@
 	"arenella-recruiter-listing-step5": "5 of 5: Skills",
 	"arenella-recruiter-listing-title": "Title",
 	"arenella-recruiter-listing-type": "Type",
-	"arenella-recruiter-listing-views": "Views"
+	"arenella-recruiter-listing-views": "Views",
+	"arenella-recruiter-mp-add-belgium": "Belgium",
+	"arenella-recruiter-mp-add-both": "Both",
+	"arenella-recruiter-mp-add-btn-add": "Add",
+	"arenella-recruiter-mp-add-btn-back": "Back",
+	"arenella-recruiter-mp-add-btn-create-by-spec": "Create by Spec",
+	"arenella-recruiter-mp-add-btn-publish": "Publish",
+	"arenella-recruiter-mp-add-btn-update": "Update",
+	"arenella-recruiter-mp-add-closing-date": "Position Closing Date",
+	"arenella-recruiter-mp-add-comments": "Comments",
+	"arenella-recruiter-mp-add-contract": "Contract Type",
+	"arenella-recruiter-mp-add-contract-type": "Contract Type",
+	"arenella-recruiter-mp-add-country": "Country",
+	"arenella-recruiter-mp-add-description": "Description",
+	"arenella-recruiter-mp-add-eu": "EU",
+	"arenella-recruiter-mp-add-ireland": "Ireland",
+	"arenella-recruiter-mp-add-location": "Location",
+	"arenella-recruiter-mp-add-netherlands": "Netherlands",
+	"arenella-recruiter-mp-add-perm": "Perm",
+	"arenella-recruiter-mp-add-pos-]title": "Position Title",
+	"arenella-recruiter-mp-add-salary": "Salary / Rate",
+	"arenella-recruiter-mp-add-skills": "Skills",
+	"arenella-recruiter-mp-add-start-date": "Start Date",
+	"arenella-recruiter-mp-add-title": "Add details of position you wish to fill via other recruiters",
+	"arenella-recruiter-mp-add-uk": "UK",
+	"arenella-recruiter-mp-add-world": "World",
+	"arenella-recruiter-mp-box-contact-btn-send": "Send",
+	"arenella-recruiter-mp-box-contact-hdr": "Send Message To Recruiter",
+	"arenella-recruiter-mp-box-msg-failed": "Failed to Send Message",
+	"arenella-recruiter-mp-box-msg-success-1": "Message Sent Successfully",
+	"arenella-recruiter-mp-box-msg-success-2": "You can view a copy of your message and any replies in your inbox",
+	"arenella-recruiter-mp-box-spec-upld-btn-extract": "Perform Extraction",
+	"arenella-recruiter-mp-box-spec-upld-filetype": "File types of .doc, .docx and pdf up to 1MB",
+	"arenella-recruiter-mp-box-spec-upld-hdr": "Extract Filters",
+	"arenella-recruiter-mp-box-spec-upld-msg-failure": "Unfortunately it was not possible to extract filters from this file.",
+	"arenella-recruiter-mp-btn-all-roles": "All Roles",
+	"arenella-recruiter-mp-btn-make-request": "Make Request",
+	"arenella-recruiter-mp-btn-my-roles": "My Roles",
+	"arenella-recruiter-mp-btn-request-candidate": "Request Candidate",
+	"arenella-recruiter-mp-detils-btn-back": "Back",
+	"arenella-recruiter-mp-detils-btn-confirm": "Confirm",
+	"arenella-recruiter-mp-detils-btn-delete": "Delete",
+	"arenella-recruiter-mp-detils-btn-edit": "Edit",
+	"arenella-recruiter-mp-detils-comments": "Comments",
+	"arenella-recruiter-mp-detils-desc": "Description",
+	"arenella-recruiter-mp-offer-candidate": "Offer Candidate",
+	"arenella-recruiter-mp-offer-candidate-country": "Country",
+	"arenella-recruiter-mp-offer-candidate-desc": "Do you have candidates that you cannot currently place? Would you like to make these candidates available\n\t\t\tto other recruiters for a rate set by you? If so this feature is for you. Add your available candidates and \n\t\t\tallow other recruiters to contact you with available projects.",
+	"arenella-recruiter-mp-offer-candidate-firstname": "First name",
+	"arenella-recruiter-mp-offer-candidate-role": "Role",
+	"arenella-recruiter-mp-offer-candidate-surname": "Surname",
+	"arenella-recruiter-mp-open-roles": "Open Roles",
+	"arenella-recruiter-mp-roles-closing": "Closing Date",
+	"arenella-recruiter-mp-roles-country": "Country",
+	"arenella-recruiter-mp-roles-created": "Created",
+	"arenella-recruiter-mp-roles-desc": "Do you have a position that you currently cannot fill? Would you like other Recruiters to be able to contact you \n\t\t\twith their available candidates in order to help you will the position. If so this feature is for you. Add details \n\t\t\tof the position you are trying to fill and allow other Recruiters to contact you with suitable candidates. ",
+	"arenella-recruiter-mp-roles-position": "Position",
+	"arenella-recruiter-mp-update-belgium": "Belgium",
+	"arenella-recruiter-mp-update-both": "Both",
+	"arenella-recruiter-mp-update-btn-add": "Add",
+	"arenella-recruiter-mp-update-closing": "Position Closing Date",
+	"arenella-recruiter-mp-update-comments": "Comments",
+	"arenella-recruiter-mp-update-contact-type": "Contract Type",
+	"arenella-recruiter-mp-update-contract": "Contract",
+	"arenella-recruiter-mp-update-country": "Country",
+	"arenella-recruiter-mp-update-description": "Description",
+	"arenella-recruiter-mp-update-eu": "EU",
+	"arenella-recruiter-mp-update-header": "Update Requested Candidate",
+	"arenella-recruiter-mp-update-ireland": "Ireland",
+	"arenella-recruiter-mp-update-location": "Location",
+	"arenella-recruiter-mp-update-netherlands": "Netherlands",
+	"arenella-recruiter-mp-update-perm": "Perm",
+	"arenella-recruiter-mp-update-pos-title": "Position Title",
+	"arenella-recruiter-mp-update-salary": "Salary / Rate",
+	"arenella-recruiter-mp-update-skills": "Skills",
+	"arenella-recruiter-mp-update-start": "Start Date",
+	"arenella-recruiter-mp-update-uk": "UK",
+	"arenella-recruiter-mp-update-world": "World",
+	"arenella-recruiter-mp-your-candidates": "Your Candidates",
+	"arenella-recruiter-prof-box-contact-btn-send": "Send",
+	"arenella-recruiter-prof-box-contact-desc1": "Message Sent Successfully",
+	"arenella-recruiter-prof-box-contact-desc2": "You can view a copy of your message and any replies in your inbox",
+	"arenella-recruiter-prof-box-contact-failed": "Failed to Send Message",
+	"arenella-recruiter-prof-box-contact-title": "Send Message",
+	"arenella-recruiter-prof-btn-back": "Back",
+	"arenella-recruiter-prof-btn-create": "Create Profile",
+	"arenella-recruiter-prof-btn-edit": "Edit Profile",
+	"arenella-recruiter-prof-btn-save": "Save",
+	"arenella-recruiter-prof-contract-types": "Recruits For The Following Contract Types",
+	"arenella-recruiter-prof-exp": "Years Experience",
+	"arenella-recruiter-prof-image": "Profile Image",
+	"arenella-recruiter-prof-intro": "Introduction",
+	"arenella-recruiter-prof-laguages": "Languages Spoken",
+	"arenella-recruiter-prof-langs-spoken": "Languages Spoken",
+	"arenella-recruiter-prof-markets": "Recruits For The Following Markets",
+	"arenella-recruiter-prof-no-account": "Please create your profile to access the community page",
+	"arenella-recruiter-prof-rec-in": "Recruits In",
+	"arenella-recruiter-prof-rec-type": "Recruitment Type",
+	"arenella-recruiter-prof-recruits-in": "Recruits In",
+	"arenella-recruiter-prof-sectors": "Sectors Active In",
+	"arenella-recruiter-prof-techs-stack": "Core Technologies",
+	"arenella-recruiter-prof-title": "Job Title",
+	"arenella-recruiter-prof-vis-can": "Visible To Candidates",
+	"arenella-recruiter-prof-vis-public": "Visible To Public",
+	"arenella-recruiter-prof-vis-rec": "Visible To Recruiters",
+	"arenella-recruiter-signup-agree": "By registering you are agreeing to your information being stored in the system. \n\t\t\t\t\t\t\t\t\t\tYour data will not be shared with third parties.\n\t\t\t\t\t\t\t\t\t\tYour activity in the site will be stored internally to provide statistics and \n\t\t\t\t\t\t\t\t\t\tto improve your user experience.",
+	"arenella-recruiter-signup-btn-start-trial": "Start free trial",
+	"arenella-recruiter-signup-companyname": "Company Name",
+	"arenella-recruiter-signup-email": "Email",
+	"arenella-recruiter-signup-en": "English",
+	"arenella-recruiter-signup-firstname": "First name",
+	"arenella-recruiter-signup-fr": "French",
+	"arenella-recruiter-signup-free-trial": "Free trial",
+	"arenella-recruiter-signup-free-trial-text": "Sign up for a no obligation free trial. During the trial you can download unlimited candidate CVs, Create unlimited posts on the job board and unlimited requests \n\t\t\t\t\t\t\tfor candidates from other recruitment agencies in the Marketplace.",
+	"arenella-recruiter-signup-hdr1": "Create Recruiter Account",
+	"arenella-recruiter-signup-hdr2": "Sign-up for a no obligation 30 day free trial",
+	"arenella-recruiter-signup-nl": "Dutch",
+	"arenella-recruiter-signup-preferred-lang": "Preferred Language",
+	"arenella-recruiter-signup-signup": "Sign-up",
+	"arenella-recruiter-signup-subscription-titles": "Free and paid subscriptions",
+	"arenella-recruiter-signup-subscriptions-text1": "The site generates revenue based upon a subscription model. After your 30 day trial ends, the next time you login you will be able to choose from either a \n\t\t\t\t\t\t\tFree subscription with limited weekly downloads, job board posts and marketplace requests or for just 120 euro's per year excluding Tax you \n\t\t\t\t\t\t\thave access to all these features with no limits.",
+	"arenella-recruiter-signup-subscriptions-text2": "The subscription is the only cost involved in using the site. There are no additional costs such as \n\t\t\t\t\t\t\tmargins or commissions for placing candidates.  ",
+	"arenella-recruiter-signup-surname": "Surname",
+	"arenella-recruiter-stats-btn-refresh": "Refresh",
+	"arenella-recruiter-stats-gen-active-users": "Active Users",
+	"arenella-recruiter-stats-gen-filter-by-post": "Filter by Post",
+	"arenella-recruiter-stats-gen-hdr": "Candidate Availability",
+	"arenella-recruiter-stats-general": "General",
+	"arenella-recruiter-stats-jb-stats": "Job board statistics",
+	"arenella-recruiter-stats-jb-stats-1": "To view statistics you will need to create at least on post on the Job board",
+	"arenella-recruiter-stats-jb-stats-2": "To add a post to the job board you can either enter the information manually or use the 'Create From Job Spec' feature. \n\t\t\tThis will scan a job description file in either Word or PDF format up to 1MB in size and automatically generate the post. \n\t\t\tYou will simply need to verify that details are correct and publish the post. ",
+	"arenella-recruiter-stats-jb-stats-3": "Posts on the job board allow site visitors to contact you directly. Posts are also shared in an external network of 24,000+ connections \n\t\t\tto attract as many candidates as possible",
+	"arenella-recruiter-stats-jb-stats-4": "When you view your own posts you can use the 'Publish' button to generate a message to copy and paste on social media which contains the hashtags for the \n\t\t\tskills selected in your post. ",
+	"arenella-recruiter-stats-jb-totals": "Totals",
+	"arenella-recruiter-stats-jb-views": "Job board Views",
+	"arenella-recruiter-stats-jb-views-this-week": "Listings viewed this week",
+	"arenella-recruiter-stats-jb-views-today": "Listings viewed today",
+	"arenella-recruiter-stats-jobboard": "Job Board",
+	"arenella-stats-added-candidates": "The following new candidates have been added:",
+	"arenella-stats-availability": "Availability",
+	"arenella-stats-availability-active-users": "Active Users",
+	"arenella-stats-availability-totals": "Totals",
+	"arenella-stats-btn-refresh": "Refresh",
+	"arenella-stats-by-function": "Available by Function",
+	"arenella-stats-by-function-btn-latest": "Latest",
+	"arenella-stats-by-function-btn-todays": "Todays",
+	"arenella-stats-candidate-views": "Requested Candidate Views",
+	"arenella-stats-candidate-views-btn-today": "Today",
+	"arenella-stats-candidate-views-btn-week": "This week",
+	"arenella-stats-daily-downloads": "Daily downloads",
+	"arenella-stats-downloads": "Downloads",
+	"arenella-stats-listings": "Listings",
+	"arenella-stats-logins": "Logins",
+	"arenella-stats-logins-btn-3-months": "3 Months",
+	"arenella-stats-logins-btn-this-week": "This Week",
+	"arenella-stats-logins-btn-today": "Today",
+	"arenella-stats-logins-btn-week": "Week",
+	"arenella-stats-logins-btn-year": "Year",
+	"arenella-stats-logins-candidates": "Candidates",
+	"arenella-stats-logins-recruiters": "logins: Recruiters:",
+	"arenella-stats-logins-title": "Logins",
+	"arenella-stats-logins-user": "User",
+	"arenella-stats-mp": "Marketplace",
+	"arenella-stats-new-candidates": "New Candidates available",
+	"arenella-stats-new-candidates-exp": "EXP",
+	"arenella-stats-new-candidates-years": "Years",
+	"arenella-stats-recruiter-downloads": "Recruiter downloads",
+	"arenella-stats-recruiter-downloads-btn-today": "Today",
+	"arenella-stats-recruiter-downloads-btn-week": "This week",
+	"arenella-stats-recruiter-downloads-totals": "Totals",
+	"arenella-stats-recruiter-downloads-views-today": "Listings viewed today",
+	"arenella-stats-recruiter-downloads-views-week": "Listings viewed this week",
+	"arenella-stats-searches": "Searches",
+	"arenella-stats-searches-btn-today": "Today",
+	"arenella-stats-searches-btn-week": "This Week",
+	"arenella-stats-searches-country": "Country",
+	"arenella-stats-searches-function": "Function",
+	"arenella-suggestions-add": "Add",
+	"arenella-suggestions-both": "Both (Includes unknown)",
+	"arenella-suggestions-box-alert-btn-save": "Save",
+	"arenella-suggestions-box-alert-failure": "Unfortunately it was not possible to create your Candidate Search Alert at this time.",
+	"arenella-suggestions-box-alert-hdr": "Create Email Alert",
+	"arenella-suggestions-box-alert-success-1": "Your Candidate Search Alert was created successfully. You will now receive alerts when matching candidates are uploaded.",
+	"arenella-suggestions-box-alert-success-2": "You can manage alerts in the 'Manage Search Alerts' screen.",
+	"arenella-suggestions-box-alert-text": "Please add required filters before creating your alert",
+	"arenella-suggestions-box-publicity-exp": "Exp",
+	"arenella-suggestions-box-publicity-hdr": "Publicity",
+	"arenella-suggestions-box-publicity-years": "years",
+	"arenella-suggestions-box-spec-extraction": "Perform Extraction",
+	"arenella-suggestions-box-spec-file": "Upload File",
+	"arenella-suggestions-box-spec-file-types": "File types of .doc, .docx and pdf up to 1MB",
+	"arenella-suggestions-box-spec-hdr": "Extract Filters",
+	"arenella-suggestions-box-spec-intro": "Please choose how to upload the job specification to filter on",
+	"arenella-suggestions-box-spec-msg-failure": "Unfortunately it was not possible to extract filters from this file.",
+	"arenella-suggestions-box-spec-text": "Paste Text",
+	"arenella-suggestions-btn-copy": "Copy",
+	"arenella-suggestions-btn-create-alert": "Create Email Alert",
+	"arenella-suggestions-btn-filter-by-spec": "Filter by Job Spec",
+	"arenella-suggestions-btn-manage-alert": "Manage Alerts",
+	"arenella-suggestions-btn-my-candidates": "My Candidates",
+	"arenella-suggestions-btn-reset": "Reset",
+	"arenella-suggestions-contract": "Contract",
+	"arenella-suggestions-country": "Country",
+	"arenella-suggestions-dutch": "Dutch",
+	"arenella-suggestions-english": "English",
+	"arenella-suggestions-experience": "Years Exp",
+	"arenella-suggestions-french": "French",
+	"arenella-suggestions-inlinecv-btn-back": "Back",
+	"arenella-suggestions-job-title": "Job Title",
+	"arenella-suggestions-language": "Languages",
+	"arenella-suggestions-permanent": "Perm",
+	"arenella-suggestions-profile-box-contact-btn-send": "Send",
+	"arenella-suggestions-profile-box-contact-hdr": "Message Candidate",
+	"arenella-suggestions-profile-box-contact-msg-failed": "Failed to Send Message",
+	"arenella-suggestions-profile-box-contact-msg-success-1": "Message Sent Successfully",
+	"arenella-suggestions-profile-box-contact-msg-success-2": "You can view a copy of your message and any replies in your inbox",
+	"arenella-suggestions-profile-box-contact-title": "Title",
+	"arenella-suggestions-profile-box-delete-hdr": "Confirm Delete",
+	"arenella-suggestions-profile-box-delete-msg": "This profile will be deleted and it will no longer be possible to access the associated data",
+	"arenella-suggestions-profile-box-msg-updated": "Updated",
+	"arenella-suggestions-profile-box-notes-btn-saved": "Save",
+	"arenella-suggestions-profile-box-notes-hdr": "Notes for Candidate",
+	"arenella-suggestions-profile-btn-back": "Back",
+	"arenella-suggestions-profile-btn-delete": "Delete",
+	"arenella-suggestions-profile-btn-download-cv": "Download CV",
+	"arenella-suggestions-profile-btn-edit": "Edit",
+	"arenella-suggestions-profile-btn-notes": "Notes",
+	"arenella-suggestions-profile-btn-save": "Save Candidate",
+	"arenella-suggestions-profile-btn-unsave": "Un-save Candidate",
+	"arenella-suggestions-profile-candidate-lang-accuracy": "Language Accuracy",
+	"arenella-suggestions-profile-candidate-matching-skills": "Matching Skills",
+	"arenella-suggestions-profile-candidate-missing-skills": "Missing Skills",
+	"arenella-suggestions-profile-candidate-name": "Name",
+	"arenella-suggestions-profile-candidate-number": "Candidate Number",
+	"arenella-suggestions-profile-candidate-skill-accuracy": "Skill Accuracy",
+	"arenella-suggestions-profile-intro-text": "I would like to introduce myself. My name is",
+	"arenella-suggestions-profile-intro-text-2": "and I have",
+	"arenella-suggestions-profile-intro-text-3": "years experience. I am currently looking for a new role.",
+	"arenella-suggestions-profile-intro-text-4": "I am based in",
+	"arenella-suggestions-profile-introduction": "Introduction",
+	"arenella-suggestions-saved-candidate-btn-back": "Back",
+	"arenella-suggestions-skills": "Skills",
+	"arenella-suggestions-to": "TO"
 }
