--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -394,5 +394,247 @@
 	"arenella-recruiter-listing-step5": "5 sur 5 : Compétences",
 	"arenella-recruiter-listing-title": "Titre",
 	"arenella-recruiter-listing-type": "Type",
-	"arenella-recruiter-listing-views": "Vues"
+	"arenella-recruiter-listing-views": "Vues",
+	"arenella-recruiter-mp-add-belgium": "Belgique",
+	"arenella-recruiter-mp-add-both": "Les deux",
+	"arenella-recruiter-mp-add-btn-add": "Ajouter",
+	"arenella-recruiter-mp-add-btn-back": "Retourner",
+	"arenella-recruiter-mp-add-btn-create-by-spec": "Crea per spec",
+	"arenella-recruiter-mp-add-btn-publish": "Publier",
+	"arenella-recruiter-mp-add-btn-update": "Mise à jour",
+	"arenella-recruiter-mp-add-closing-date": "Date de clôture du poste",
+	"arenella-recruiter-mp-add-comments": "Commentaires",
+	"arenella-recruiter-mp-add-contract": "Type de contrat",
+	"arenella-recruiter-mp-add-contract-type": "Type de contrat",
+	"arenella-recruiter-mp-add-country": "Pays",
+	"arenella-recruiter-mp-add-description": "Description",
+	"arenella-recruiter-mp-add-eu": "EU",
+	"arenella-recruiter-mp-add-ireland": "Irlande",
+	"arenella-recruiter-mp-add-location": "Emplacement",
+	"arenella-recruiter-mp-add-netherlands": "Pays-Bas",
+	"arenella-recruiter-mp-add-perm": "Perm",
+	"arenella-recruiter-mp-add-pos-]title": "Titre du poste",
+	"arenella-recruiter-mp-add-salary": "Salaire / Taux",
+	"arenella-recruiter-mp-add-skills": "Compétences",
+	"arenella-recruiter-mp-add-start-date": "Date de début",
+	"arenella-recruiter-mp-add-title": "Ajoutez les détails du poste que vous souhaitez pourvoir via d'autres recruteurs",
+	"arenella-recruiter-mp-add-uk": "Roayume-Uni",
+	"arenella-recruiter-mp-add-world": "Monde",
+	"arenella-recruiter-mp-box-contact-btn-send": "Envoyer",
+	"arenella-recruiter-mp-box-contact-hdr": "Envoyer un message au recruteur",
+	"arenella-recruiter-mp-box-msg-failed": "Échec de l'envoi du message",
+	"arenella-recruiter-mp-box-msg-success-1": "Message envoyé avec succès",
+	"arenella-recruiter-mp-box-msg-success-2": "Vous pouvez afficher une copie de votre message et toutes les réponses dans votre boîte de réception",
+	"arenella-recruiter-mp-box-spec-upld-btn-extract": "Effectuer l'extraction",
+	"arenella-recruiter-mp-box-spec-upld-filetype": "Types de fichiers .doc, .docx et pdf jusqu'à 1 Mo",
+	"arenella-recruiter-mp-box-spec-upld-hdr": "Extraire les filtres",
+	"arenella-recruiter-mp-box-spec-upld-msg-failure": "Malheureusement, il n'a pas été possible d'extraire les filtres de ce fichier.",
+	"arenella-recruiter-mp-btn-all-roles": "Tous les rôles",
+	"arenella-recruiter-mp-btn-make-request": "Faire une requête",
+	"arenella-recruiter-mp-btn-my-roles": "Mes rôles",
+	"arenella-recruiter-mp-btn-request-candidate": "Demander un candidat",
+	"arenella-recruiter-mp-detils-btn-back": "Retourner",
+	"arenella-recruiter-mp-detils-btn-confirm": "Confirmer",
+	"arenella-recruiter-mp-detils-btn-delete": "Supprimer",
+	"arenella-recruiter-mp-detils-btn-edit": "Modifier",
+	"arenella-recruiter-mp-detils-comments": "Commentaires",
+	"arenella-recruiter-mp-detils-desc": "Description",
+	"arenella-recruiter-mp-offer-candidate": "Offre Candidat",
+	"arenella-recruiter-mp-offer-candidate-country": "Pays",
+	"arenella-recruiter-mp-offer-candidate-desc": "Avez-vous des candidats que vous ne pouvez pas placer actuellement ? Souhaitez-vous rendre ces candidats disponibles\nà d'autres recruteurs pour un tarif fixé par vous ? Si tel est le cas, cette fonctionnalité est faite pour vous. Ajoutez vos candidats disponibles et\npermettre à d’autres recruteurs de vous contacter avec des projets disponibles.",
+	"arenella-recruiter-mp-offer-candidate-firstname": "Nom",
+	"arenella-recruiter-mp-offer-candidate-role": "Rôle",
+	"arenella-recruiter-mp-offer-candidate-surname": "Nom de famille",
+	"arenella-recruiter-mp-open-roles": "Rôles ouverts",
+	"arenella-recruiter-mp-roles-closing": "Date de clôture",
+	"arenella-recruiter-mp-roles-country": "Pays",
+	"arenella-recruiter-mp-roles-created": "Créé",
+	"arenella-recruiter-mp-roles-desc": "Avez-vous un poste que vous ne pouvez pas pourvoir actuellement ? Souhaitez-vous que d'autres Recruteurs puissent vous contacter\navec leurs candidats disponibles afin de vous aider à décrocher le poste. Si tel est le cas, cette fonctionnalité est faite pour vous. Ajouter des détails\ndu poste que vous essayez de pourvoir et permettre à d'autres recruteurs de vous contacter avec des candidats appropriés.",
+	"arenella-recruiter-mp-roles-position": "Position",
+	"arenella-recruiter-mp-update-belgium": "Belgique",
+	"arenella-recruiter-mp-update-both": "Les deux",
+	"arenella-recruiter-mp-update-btn-add": "Ajouter",
+	"arenella-recruiter-mp-update-closing": "Date de clôture du poste",
+	"arenella-recruiter-mp-update-comments": "commentaires",
+	"arenella-recruiter-mp-update-contact-type": "Type de contrat",
+	"arenella-recruiter-mp-update-contract": "Contrat",
+	"arenella-recruiter-mp-update-country": "Pays",
+	"arenella-recruiter-mp-update-description": "Description",
+	"arenella-recruiter-mp-update-eu": "EU",
+	"arenella-recruiter-mp-update-header": "Mettre à jour le candidat demandé",
+	"arenella-recruiter-mp-update-ireland": "Irlande",
+	"arenella-recruiter-mp-update-location": "Emplacement",
+	"arenella-recruiter-mp-update-netherlands": "Pays-Bas",
+	"arenella-recruiter-mp-update-perm": "Perm",
+	"arenella-recruiter-mp-update-pos-title": "Titre du poste",
+	"arenella-recruiter-mp-update-salary": "Salaire / Taux",
+	"arenella-recruiter-mp-update-skills": "Compétences",
+	"arenella-recruiter-mp-update-start": "Date de début",
+	"arenella-recruiter-mp-update-uk": "UK",
+	"arenella-recruiter-mp-update-world": "Monde",
+	"arenella-recruiter-mp-your-candidates": "Vos candidats",
+	"arenella-recruiter-prof-box-contact-btn-send": "Envoyer",
+	"arenella-recruiter-prof-box-contact-desc1": "Message envoyé avec succès",
+	"arenella-recruiter-prof-box-contact-desc2": "Vous pouvez afficher une copie de votre message et toutes les réponses dans votre boîte de réception",
+	"arenella-recruiter-prof-box-contact-failed": "Échec de l'envoi du message",
+	"arenella-recruiter-prof-box-contact-title": "Envoyer le message",
+	"arenella-recruiter-prof-btn-back": "Retourner",
+	"arenella-recruiter-prof-btn-create": "Créer un profil",
+	"arenella-recruiter-prof-btn-edit": "Editer le profil",
+	"arenella-recruiter-prof-btn-save": "Garde",
+	"arenella-recruiter-prof-contract-types": "Recrute pour les types de contrat suivants",
+	"arenella-recruiter-prof-exp": "Années d'expérience",
+	"arenella-recruiter-prof-image": "Image de profil",
+	"arenella-recruiter-prof-intro": "Introduction",
+	"arenella-recruiter-prof-laguages": "Langues parlées",
+	"arenella-recruiter-prof-langs-spoken": "Langues parlées",
+	"arenella-recruiter-prof-markets": "Recrutes pour les marchés suivants",
+	"arenella-recruiter-prof-no-account": "Veuillez créer votre profil pour accéder à la page de la communauté",
+	"arenella-recruiter-prof-rec-in": "Recrutes dans",
+	"arenella-recruiter-prof-rec-type": "Type de recrutement",
+	"arenella-recruiter-prof-recruits-in": "Recrutes dans",
+	"arenella-recruiter-prof-sectors": "Secteurs actifs dans",
+	"arenella-recruiter-prof-techs-stack": "Technologies de base",
+	"arenella-recruiter-prof-title": "Titre d'emploi",
+	"arenella-recruiter-prof-vis-can": "Visible pour les candidats",
+	"arenella-recruiter-prof-vis-public": "Visible au public",
+	"arenella-recruiter-prof-vis-rec": "Visible pour les recruteurs",
+	"arenella-recruiter-signup-agree": "En vous inscrivant, vous acceptez que vos informations soient stockées dans le système.\nVos données ne seront pas partagées avec des tiers.\nVotre activité sur le site sera stockée en interne pour fournir des statistiques et\npour améliorer votre expérience utilisateur.",
+	"arenella-recruiter-signup-btn-start-trial": "Commencer l'essai gratuit",
+	"arenella-recruiter-signup-companyname": "Nom de l'entreprise",
+	"arenella-recruiter-signup-email": "E-mail",
+	"arenella-recruiter-signup-en": "Anglais",
+	"arenella-recruiter-signup-firstname": "Prénom",
+	"arenella-recruiter-signup-fr": "Français",
+	"arenella-recruiter-signup-free-trial": "Essai gratuit",
+	"arenella-recruiter-signup-free-trial-text": "Inscrivez-vous pour un essai gratuit et sans engagement. Pendant la période d'essai, vous pouvez télécharger un nombre illimité de CV de candidats, créer un nombre illimité de publications sur le site d'emploi et des demandes illimitées.\npour les candidats d'autres agences de recrutement sur la Marketplace.",
+	"arenella-recruiter-signup-hdr1": "Créer un compte recruteur",
+	"arenella-recruiter-signup-hdr2": "Inscrivez-vous pour un essai gratuit de 30 jours sans engagement",
+	"arenella-recruiter-signup-nl": "Néerlandais",
+	"arenella-recruiter-signup-preferred-lang": "langue préférée",
+	"arenella-recruiter-signup-signup": "S'inscrire",
+	"arenella-recruiter-signup-subscription-titles": "Abonnements gratuits et payants",
+	"arenella-recruiter-signup-subscriptions-text1": "Le site génère des revenus basés sur un modèle d'abonnement. Une fois votre essai de 30 jours terminé, la prochaine fois que vous vous connecterez, vous pourrez choisir entre un\nAbonnement gratuit avec téléchargements hebdomadaires limités, publications sur les sites d'emploi et demandes de marché ou pour seulement 120 euros par an hors taxes\navoir accès à toutes ces fonctionnalités sans limites.",
+	"arenella-recruiter-signup-subscriptions-text2": "L'abonnement est le seul coût lié à l'utilisation du site. Il n'y a pas de frais supplémentaires tels que\nmarges ou commissions pour le placement des candidats.",
+	"arenella-recruiter-signup-surname": "Nom de famille",
+	"arenella-recruiter-stats-btn-refresh": "Rafraîchir",
+	"arenella-recruiter-stats-gen-active-users": "Utilisateurs actifs",
+	"arenella-recruiter-stats-gen-filter-by-post": "Filtrer par publication",
+	"arenella-recruiter-stats-gen-hdr": "Disponibilité des candidats",
+	"arenella-recruiter-stats-general": "Général",
+	"arenella-recruiter-stats-jb-stats": "Statistiques des sites d'emploi",
+	"arenella-recruiter-stats-jb-stats-1": "Pour afficher les statistiques, vous devrez créer au moins une publication sur le site d'emploi.",
+	"arenella-recruiter-stats-jb-stats-2": "Pour ajouter une publication au site d'offres d'emploi, vous pouvez soit saisir les informations manuellement, soit utiliser la fonction « Créer à partir des spécifications d'emploi ».\nCela analysera un fichier de description de poste au format Word ou PDF jusqu'à 1 Mo et générera automatiquement la publication.\nVous devrez simplement vérifier que les détails sont corrects et publier le message.",
+	"arenella-recruiter-stats-jb-stats-3": "Les publications sur le site d'emploi permettent aux visiteurs du site de vous contacter directement. Les publications sont également partagées sur un réseau externe de plus de 24 000 connexions\npour attirer le plus de candidats possible",
+	"arenella-recruiter-stats-jb-stats-4": "Lorsque vous consultez vos propres publications, vous pouvez utiliser le bouton « Publier » pour générer un message à copier et coller sur les réseaux sociaux contenant les hashtags du\ncompétences sélectionnées dans votre message.",
+	"arenella-recruiter-stats-jb-totals": "Totaux",
+	"arenella-recruiter-stats-jb-views": "Affichages du site d'emploi",
+	"arenella-recruiter-stats-jb-views-this-week": "Annonces consultées cette semaine",
+	"arenella-recruiter-stats-jb-views-today": "Annonces consultées aujourd'hui",
+	"arenella-recruiter-stats-jobboard": "Tableau d'emploi",
+	"arenella-stats-added-candidates": "Les nouveaux candidats suivants ont été ajoutés :",
+	"arenella-stats-availability": "Disponibilité",
+	"arenella-stats-availability-active-users": "Utilisateurs actifs",
+	"arenella-stats-availability-totals": "Totaux",
+	"arenella-stats-btn-refresh": "Rafraîchir",
+	"arenella-stats-by-function": "Disponible par fonction",
+	"arenella-stats-by-function-btn-latest": "Dernier",
+	"arenella-stats-by-function-btn-todays": "Aujourd'hui",
+	"arenella-stats-candidate-views": "Opinions des candidats demandées",
+	"arenella-stats-candidate-views-btn-today": "Aujourd'hui",
+	"arenella-stats-candidate-views-btn-week": "Cette semaine",
+	"arenella-stats-daily-downloads": "Téléchargements quotidiens",
+	"arenella-stats-downloads": "Téléchargements",
+	"arenella-stats-listings": "Annonces",
+	"arenella-stats-logins": "Connexions",
+	"arenella-stats-logins-btn-3-months": "3 mois",
+	"arenella-stats-logins-btn-this-week": "Cette semaine",
+	"arenella-stats-logins-btn-today": "Aujourd'hui",
+	"arenella-stats-logins-btn-week": "Semaine",
+	"arenella-stats-logins-btn-year": "Année",
+	"arenella-stats-logins-candidates": "Candidats",
+	"arenella-stats-logins-recruiters": "Identifiants : Recruteurs :",
+	"arenella-stats-logins-title": "Connexions",
+	"arenella-stats-logins-user": "Utilisateur",
+	"arenella-stats-mp": "Marché",
+	"arenella-stats-new-candidates": "Nouveaux candidats disponibles",
+	"arenella-stats-new-candidates-exp": "EXP",
+	"arenella-stats-new-candidates-years": "Ans",
+	"arenella-stats-recruiter-downloads": "Téléchargements pour les recruteurs",
+	"arenella-stats-recruiter-downloads-btn-today": "Aujourd'hui",
+	"arenella-stats-recruiter-downloads-btn-week": "Cette semaine",
+	"arenella-stats-recruiter-downloads-totals": "Totaux",
+	"arenella-stats-recruiter-downloads-views-today": "Annonces consultées aujourd'hui",
+	"arenella-stats-recruiter-downloads-views-week": "Annonces consultées cette semaine",
+	"arenella-stats-searches": "Recherches",
+	"arenella-stats-searches-btn-today": "Aujourd'hui",
+	"arenella-stats-searches-btn-week": "Cette semaine",
+	"arenella-stats-searches-country": "Pays",
+	"arenella-stats-searches-function": "Fonction",
+	"arenella-suggestions-add": "Ajouter",
+	"arenella-suggestions-both": "Les deux (Inclut inconnu)",
+	"arenella-suggestions-box-alert-btn-save": "Garde",
+	"arenella-suggestions-box-alert-failure": "Malheureusement, il n'a pas été possible d'envoyer la réponse pour le moment.",
+	"arenella-suggestions-box-alert-hdr": "Créer une alerte",
+	"arenella-suggestions-box-alert-success-1": "Votre alerte de recherche de candidat a été créée avec succès. Vous recevrez désormais des alertes lorsque les candidats correspondants seront téléchargés.",
+	"arenella-suggestions-box-alert-success-2": "Vous pouvez gérer les alertes dans l'écran « Gérer les alertes de recherche ».",
+	"arenella-suggestions-box-alert-text": "Veuillez ajouter les filtres requis avant de créer votre alerte",
+	"arenella-suggestions-box-publicity-exp": "Exp",
+	"arenella-suggestions-box-publicity-hdr": "Publicité",
+	"arenella-suggestions-box-publicity-years": "Ans",
+	"arenella-suggestions-box-spec-extraction": "Effectuer l'extraction",
+	"arenella-suggestions-box-spec-file": "Téléverser un fichier",
+	"arenella-suggestions-box-spec-file-types": "Types de fichiers .doc, .docx et pdf jusqu'à 1 Mo",
+	"arenella-suggestions-box-spec-hdr": "Extraire les filtres",
+	"arenella-suggestions-box-spec-intro": "Veuillez choisir comment télécharger la spécification du poste sur laquelle filtrer",
+	"arenella-suggestions-box-spec-msg-failure": "Malheureusement, il n'a pas été possible d'extraire les filtres de ce fichier.",
+	"arenella-suggestions-box-spec-text": "Coller le texte",
+	"arenella-suggestions-btn-copy": "Copie",
+	"arenella-suggestions-btn-create-alert": "Créer une alerte",
+	"arenella-suggestions-btn-filter-by-spec": "Filtrer par spécification de travail",
+	"arenella-suggestions-btn-manage-alert": "Gérer les alertes",
+	"arenella-suggestions-btn-my-candidates": "Mes candidats",
+	"arenella-suggestions-btn-reset": "recomposer",
+	"arenella-suggestions-contract": "Contrat ",
+	"arenella-suggestions-country": "Pays",
+	"arenella-suggestions-dutch": "Néerlandais",
+	"arenella-suggestions-english": "Anglais",
+	"arenella-suggestions-experience": "Années d'expérience",
+	"arenella-suggestions-french": "Français",
+	"arenella-suggestions-inlinecv-btn-back": "Retourner",
+	"arenella-suggestions-job-title": "Titre d'emploi",
+	"arenella-suggestions-language": "Langues",
+	"arenella-suggestions-permanent": "Perm",
+	"arenella-suggestions-profile-box-contact-btn-send": "Envoyer",
+	"arenella-suggestions-profile-box-contact-hdr": "Message candidat",
+	"arenella-suggestions-profile-box-contact-msg-failed": "Échec de l'envoi du message",
+	"arenella-suggestions-profile-box-contact-msg-success-1": "Message envoyé avec succès",
+	"arenella-suggestions-profile-box-contact-msg-success-2": "Vous pouvez afficher une copie de votre message et toutes les réponses dans votre boîte de réception",
+	"arenella-suggestions-profile-box-contact-title": "Titre",
+	"arenella-suggestions-profile-box-delete-hdr": "Confirmation de la suppression",
+	"arenella-suggestions-profile-box-delete-msg": "Ce profil sera supprimé et il ne sera plus possible d'accéder aux données associées",
+	"arenella-suggestions-profile-box-msg-updated": "Mettre à jour",
+	"arenella-suggestions-profile-box-notes-btn-saved": "Garde",
+	"arenella-suggestions-profile-box-notes-hdr": "Notes pour le candidat",
+	"arenella-suggestions-profile-btn-back": "Retourner",
+	"arenella-suggestions-profile-btn-delete": "Supprimer",
+	"arenella-suggestions-profile-btn-download-cv": "Télécharger CV",
+	"arenella-suggestions-profile-btn-edit": "Modifier",
+	"arenella-suggestions-profile-btn-notes": "Notes",
+	"arenella-suggestions-profile-btn-save": "Enregistrer le candidat",
+	"arenella-suggestions-profile-btn-unsave": "Annuler l'enregistrement du candidat",
+	"arenella-suggestions-profile-candidate-lang-accuracy": "Précision de la langue",
+	"arenella-suggestions-profile-candidate-matching-skills": "Compétences correspondantes",
+	"arenella-suggestions-profile-candidate-missing-skills": "Compétences manquantes",
+	"arenella-suggestions-profile-candidate-name": "Prénom",
+	"arenella-suggestions-profile-candidate-number": "ID du candidat",
+	"arenella-suggestions-profile-candidate-skill-accuracy": "Précision des compétences",
+	"arenella-suggestions-profile-intro-text": "J'aimerais me présenter. Mon nom est",
+	"arenella-suggestions-profile-intro-text-2": "et j'ai",
+	"arenella-suggestions-profile-intro-text-3": "années d'expérience. Je suis actuellement à la recherche d'un nouveau rôle.",
+	"arenella-suggestions-profile-intro-text-4": "Je suis basé à",
+	"arenella-suggestions-profile-introduction": "Introduction",
+	"arenella-suggestions-saved-candidate-btn-back": "retourner",
+	"arenella-suggestions-skills": "Compétences",
+	"arenella-suggestions-to": "À"
 }
