--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -394,5 +394,247 @@
 	"arenella-recruiter-listing-step5": "5 di 5: Competenze",
 	"arenella-recruiter-listing-title": "Titolo",
 	"arenella-recruiter-listing-type": "Tipo",
-	"arenella-recruiter-listing-views": "Visualizzazioni"
+	"arenella-recruiter-listing-views": "Visualizzazioni",
+	"arenella-recruiter-mp-add-belgium": "Belgio",
+	"arenella-recruiter-mp-add-both": "Entrambi",
+	"arenella-recruiter-mp-add-btn-add": "Aggiungere",
+	"arenella-recruiter-mp-add-btn-back": "Indietro",
+	"arenella-recruiter-mp-add-btn-create-by-spec": "Créer par spécification",
+	"arenella-recruiter-mp-add-btn-publish": "Pubblicare",
+	"arenella-recruiter-mp-add-btn-update": "Aggiornamento",
+	"arenella-recruiter-mp-add-closing-date": "Data di chiusura della posizione",
+	"arenella-recruiter-mp-add-comments": "Commenti",
+	"arenella-recruiter-mp-add-contract": "Tipo de contratto",
+	"arenella-recruiter-mp-add-contract-type": "Tipo di Contratto",
+	"arenella-recruiter-mp-add-country": "Paese",
+	"arenella-recruiter-mp-add-description": "Descrizione",
+	"arenella-recruiter-mp-add-eu": "EU",
+	"arenella-recruiter-mp-add-ireland": "Irlanda",
+	"arenella-recruiter-mp-add-location": "Posizione",
+	"arenella-recruiter-mp-add-netherlands": "Olanda",
+	"arenella-recruiter-mp-add-perm": "Perm",
+	"arenella-recruiter-mp-add-pos-]title": "Titolo della posizione",
+	"arenella-recruiter-mp-add-salary": "Stipendio/Tariffa",
+	"arenella-recruiter-mp-add-skills": "Competenze",
+	"arenella-recruiter-mp-add-start-date": "Data d'inizio",
+	"arenella-recruiter-mp-add-title": "Aggiungi i dettagli della posizione che desideri ricoprire tramite altri reclutatori",
+	"arenella-recruiter-mp-add-uk": "UK",
+	"arenella-recruiter-mp-add-world": "Mondo",
+	"arenella-recruiter-mp-box-contact-btn-send": "Inviare",
+	"arenella-recruiter-mp-box-contact-hdr": "Invia un messaggio al reclutatore",
+	"arenella-recruiter-mp-box-msg-failed": "Impossibile inviare il messaggio",
+	"arenella-recruiter-mp-box-msg-success-1": "Messaggio inviato con successo",
+	"arenella-recruiter-mp-box-msg-success-2": "Puoi visualizzare una copia del tuo messaggio e le eventuali risposte nella tua casella di posta",
+	"arenella-recruiter-mp-box-spec-upld-btn-extract": "Eseguire l'estrazione",
+	"arenella-recruiter-mp-box-spec-upld-filetype": "Tipi di file .doc, .docx e pdf fino a 1 MB",
+	"arenella-recruiter-mp-box-spec-upld-hdr": "Estrai filtri",
+	"arenella-recruiter-mp-box-spec-upld-msg-failure": "Purtroppo non è stato possibile estrarre i filtri da questo file.",
+	"arenella-recruiter-mp-btn-all-roles": "Tutti i ruoli",
+	"arenella-recruiter-mp-btn-make-request": "Fare una richiesta",
+	"arenella-recruiter-mp-btn-my-roles": "I miei ruoli",
+	"arenella-recruiter-mp-btn-request-candidate": "Richiedi candidato",
+	"arenella-recruiter-mp-detils-btn-back": "Indietro",
+	"arenella-recruiter-mp-detils-btn-confirm": "Confermare",
+	"arenella-recruiter-mp-detils-btn-delete": "Eliminare",
+	"arenella-recruiter-mp-detils-btn-edit": "Modificare",
+	"arenella-recruiter-mp-detils-comments": "Commenti",
+	"arenella-recruiter-mp-detils-desc": "Descrizione",
+	"arenella-recruiter-mp-offer-candidate": "Candidato all'offerta",
+	"arenella-recruiter-mp-offer-candidate-country": "Paese",
+	"arenella-recruiter-mp-offer-candidate-desc": "Hai candidati che al momento non puoi inserire? Desideri rendere disponibili questi candidati?\nad altri reclutatori per una tariffa stabilita da te? Se è così, questa funzione è per te. Aggiungi i tuoi candidati disponibili e\nconsentire ad altri reclutatori di contattarti con progetti disponibili.",
+	"arenella-recruiter-mp-offer-candidate-firstname": "Nome",
+	"arenella-recruiter-mp-offer-candidate-role": "Ruolo",
+	"arenella-recruiter-mp-offer-candidate-surname": "Cognome",
+	"arenella-recruiter-mp-open-roles": "Ruoli aperti",
+	"arenella-recruiter-mp-roles-closing": "Data di chiusura",
+	"arenella-recruiter-mp-roles-country": "Paese",
+	"arenella-recruiter-mp-roles-created": "Creato",
+	"arenella-recruiter-mp-roles-desc": "Hai una posizione che al momento non puoi ricoprire? Vorresti che altri recruiter potessero contattarti\ncon i loro candidati disponibili per aiutarti a ricoprire la posizione. Se è così, questa funzione è per te. Aggiungi dettagli\ndella posizione che stai cercando di ricoprire e consentire ad altri reclutatori di contattarti con candidati idonei.",
+	"arenella-recruiter-mp-roles-position": "Posizione",
+	"arenella-recruiter-mp-update-belgium": "Belgio",
+	"arenella-recruiter-mp-update-both": "Entrambi",
+	"arenella-recruiter-mp-update-btn-add": "Aggiungere",
+	"arenella-recruiter-mp-update-closing": "Data di chiusura della posizione",
+	"arenella-recruiter-mp-update-comments": "Commenti",
+	"arenella-recruiter-mp-update-contact-type": "Tipo di contratto",
+	"arenella-recruiter-mp-update-contract": "Contratto",
+	"arenella-recruiter-mp-update-country": "Paese",
+	"arenella-recruiter-mp-update-description": "Descrizione",
+	"arenella-recruiter-mp-update-eu": "EU",
+	"arenella-recruiter-mp-update-header": "Aggiorna candidato richiesto",
+	"arenella-recruiter-mp-update-ireland": "Irlanda",
+	"arenella-recruiter-mp-update-location": "Localizzazione",
+	"arenella-recruiter-mp-update-netherlands": "Olanda",
+	"arenella-recruiter-mp-update-perm": "Perm",
+	"arenella-recruiter-mp-update-pos-title": "Titolo della posizione",
+	"arenella-recruiter-mp-update-salary": "Stipendio/Tariffa",
+	"arenella-recruiter-mp-update-skills": "Competenze",
+	"arenella-recruiter-mp-update-start": "Data d'inizio",
+	"arenella-recruiter-mp-update-uk": "UK",
+	"arenella-recruiter-mp-update-world": "Mondo",
+	"arenella-recruiter-mp-your-candidates": "I tuoi candidati",
+	"arenella-recruiter-prof-box-contact-btn-send": "Inviare",
+	"arenella-recruiter-prof-box-contact-desc1": "Messaggio inviato con successo",
+	"arenella-recruiter-prof-box-contact-desc2": "Puoi visualizzare una copia del tuo messaggio e le eventuali risposte nella tua casella di posta",
+	"arenella-recruiter-prof-box-contact-failed": "Impossibile inviare il messaggio",
+	"arenella-recruiter-prof-box-contact-title": "Invia messaggio",
+	"arenella-recruiter-prof-btn-back": "Indietro",
+	"arenella-recruiter-prof-btn-create": "Crea un profilo",
+	"arenella-recruiter-prof-btn-edit": "Modifica Profilo",
+	"arenella-recruiter-prof-btn-save": "salvo",
+	"arenella-recruiter-prof-contract-types": "Reclute per i seguenti tipi di contratto",
+	"arenella-recruiter-prof-exp": "Anni di esperienza",
+	"arenella-recruiter-prof-image": "Immagine del profilo",
+	"arenella-recruiter-prof-intro": "Introduzione",
+	"arenella-recruiter-prof-laguages": "Lingue parlate",
+	"arenella-recruiter-prof-langs-spoken": "Lingue parlate",
+	"arenella-recruiter-prof-markets": "Reclute per i seguenti mercati",
+	"arenella-recruiter-prof-no-account": "Crea il tuo profilo per accedere alla pagina della community",
+	"arenella-recruiter-prof-rec-in": "Reclute dentro",
+	"arenella-recruiter-prof-rec-type": "Tipo di reclutamento",
+	"arenella-recruiter-prof-recruits-in": "Reclute dentro",
+	"arenella-recruiter-prof-sectors": "Settori attivi in",
+	"arenella-recruiter-prof-techs-stack": "Tecnologie fondamentali",
+	"arenella-recruiter-prof-title": "Titolo di lavoro",
+	"arenella-recruiter-prof-vis-can": "Visibile ai candidati",
+	"arenella-recruiter-prof-vis-public": "Visibile al pubblico",
+	"arenella-recruiter-prof-vis-rec": "Visibile ai reclutatori",
+	"arenella-recruiter-signup-agree": "Registrandoti accetti che i tuoi dati vengano archiviati nel sistema.\nI tuoi dati non saranno condivisi con terze parti.\nLa tua attività nel sito verrà archiviata internamente per fornire statistiche e\nper migliorare la tua esperienza utente.",
+	"arenella-recruiter-signup-btn-start-trial": "Inizia la prova gratuita",
+	"arenella-recruiter-signup-companyname": "Nome della ditta",
+	"arenella-recruiter-signup-email": "Email",
+	"arenella-recruiter-signup-en": "Inglese",
+	"arenella-recruiter-signup-firstname": "Nome",
+	"arenella-recruiter-signup-fr": "Francese",
+	"arenella-recruiter-signup-free-trial": "Prova gratuita",
+	"arenella-recruiter-signup-free-trial-text": "Iscriviti per una prova gratuita senza impegno. Durante la prova puoi scaricare un numero illimitato di CV di candidati, creare post illimitati sulla bacheca di lavoro e richieste illimitate\nper i candidati di altre agenzie di reclutamento nel Marketplace.",
+	"arenella-recruiter-signup-hdr1": "Crea un account reclutatore",
+	"arenella-recruiter-signup-hdr2": "Iscriviti per una prova gratuita di 30 giorni senza impegno",
+	"arenella-recruiter-signup-nl": "Olandese",
+	"arenella-recruiter-signup-preferred-lang": "Lingua preferita",
+	"arenella-recruiter-signup-signup": "Iscrizione",
+	"arenella-recruiter-signup-subscription-titles": "Abbonamenti gratuiti e a pagamento",
+	"arenella-recruiter-signup-subscriptions-text1": "Il sito genera entrate in base a un modello di abbonamento. Al termine del periodo di prova di 30 giorni, al successivo accesso potrai scegliere tra a\nAbbonamento gratuito con download settimanali limitati, annunci di annunci di lavoro e richieste sul mercato o per soli 120 euro all'anno tasse escluse\navere accesso a tutte queste funzionalità senza limiti.",
+	"arenella-recruiter-signup-subscriptions-text2": "L'abbonamento è l'unico costo previsto per l'utilizzo del sito. Non ci sono costi aggiuntivi come\nmargini o commissioni per l’inserimento dei candidati.",
+	"arenella-recruiter-signup-surname": "Cognome",
+	"arenella-recruiter-stats-btn-refresh": "Ricaricare",
+	"arenella-recruiter-stats-gen-active-users": "Utenti attivi",
+	"arenella-recruiter-stats-gen-filter-by-post": "Filtra per messaggio",
+	"arenella-recruiter-stats-gen-hdr": "Disponibilità del candidato",
+	"arenella-recruiter-stats-general": "Generale",
+	"arenella-recruiter-stats-jb-stats": "Statistiche della bacheca di lavoro",
+	"arenella-recruiter-stats-jb-stats-1": "Per visualizzare le statistiche dovrai creare almeno un post sulla Job board",
+	"arenella-recruiter-stats-jb-stats-2": "Per aggiungere un post alla bacheca di lavoro puoi inserire le informazioni manualmente o utilizzare la funzione \"Crea da specifiche di lavoro\".\nQuesto eseguirà la scansione di un file di descrizione del lavoro in formato Word o PDF fino a 1 MB di dimensione e genererà automaticamente il post.\nDovrai semplicemente verificare che i dati siano corretti e pubblicare il post.",
+	"arenella-recruiter-stats-jb-stats-3": "I post sulla bacheca del lavoro consentono ai visitatori del sito di contattarti direttamente. I post vengono condivisi anche in una rete esterna di oltre 24.000 connessioni\nper attirare il maggior numero possibile di candidati",
+	"arenella-recruiter-stats-jb-stats-4": "Quando visualizzi i tuoi post puoi utilizzare il pulsante 'Pubblica' per generare un messaggio da copiare e incollare sui social media che contiene gli hashtag per il\ncompetenze selezionate nel tuo post.",
+	"arenella-recruiter-stats-jb-totals": "Totali",
+	"arenella-recruiter-stats-jb-views": "Visualizzazioni della bacheca di lavoro",
+	"arenella-recruiter-stats-jb-views-this-week": "Annunci visualizzati questa settimana",
+	"arenella-recruiter-stats-jb-views-today": "Annunci visualizzati oggi",
+	"arenella-recruiter-stats-jobboard": "Bacheca di lavoro",
+	"arenella-stats-added-candidates": "Sono stati aggiunti i seguenti nuovi candidati:",
+	"arenella-stats-availability": "Disponibilità",
+	"arenella-stats-availability-active-users": "Utenti attivi",
+	"arenella-stats-availability-totals": "Totali",
+	"arenella-stats-btn-refresh": "Ricaricare",
+	"arenella-stats-by-function": "Disponibile per funzione",
+	"arenella-stats-by-function-btn-latest": "Ultimo",
+	"arenella-stats-by-function-btn-todays": "Di oggi",
+	"arenella-stats-candidate-views": "Visualizzazioni dei candidati richieste",
+	"arenella-stats-candidate-views-btn-today": "Oggi",
+	"arenella-stats-candidate-views-btn-week": "Questa settimana",
+	"arenella-stats-daily-downloads": "Download giornalieri",
+	"arenella-stats-downloads": "Download",
+	"arenella-stats-listings": "Annunci",
+	"arenella-stats-logins": "Accessi",
+	"arenella-stats-logins-btn-3-months": "3 mesi",
+	"arenella-stats-logins-btn-this-week": "Questa settimana",
+	"arenella-stats-logins-btn-today": "Oggi",
+	"arenella-stats-logins-btn-week": "Settimana",
+	"arenella-stats-logins-btn-year": "Anno",
+	"arenella-stats-logins-candidates": "Candidati",
+	"arenella-stats-logins-recruiters": "Accessi: Reclutatori:",
+	"arenella-stats-logins-title": "Accessi",
+	"arenella-stats-logins-user": "Utente",
+	"arenella-stats-mp": "Mercato",
+	"arenella-stats-new-candidates": "Nuovi candidati disponibili",
+	"arenella-stats-new-candidates-exp": "EXP",
+	"arenella-stats-new-candidates-years": "Anni",
+	"arenella-stats-recruiter-downloads": "Download del reclutatore",
+	"arenella-stats-recruiter-downloads-btn-today": "Oggi",
+	"arenella-stats-recruiter-downloads-btn-week": "Questa settimana",
+	"arenella-stats-recruiter-downloads-totals": "Totali",
+	"arenella-stats-recruiter-downloads-views-today": "Annunci visualizzati oggi",
+	"arenella-stats-recruiter-downloads-views-week": "Annunci visualizzati questa settimana",
+	"arenella-stats-searches": "Ricerche",
+	"arenella-stats-searches-btn-today": "Oggi",
+	"arenella-stats-searches-btn-week": "Questa settimana",
+	"arenella-stats-searches-country": "Paese",
+	"arenella-stats-searches-function": "Funzione",
+	"arenella-suggestions-add": "Aggiungere",
+	"arenella-suggestions-both": "Entrambi (include sconosciuto)",
+	"arenella-suggestions-box-alert-btn-save": "salvo",
+	"arenella-suggestions-box-alert-failure": "Purtroppo non è stato possibile inviare la risposta in questo momento.",
+	"arenella-suggestions-box-alert-hdr": "Crea avviso e-mail",
+	"arenella-suggestions-box-alert-success-1": "Il tuo avviso di ricerca candidati è stato creato correttamente. Ora riceverai avvisi quando verranno caricati i candidati corrispondenti.",
+	"arenella-suggestions-box-alert-success-2": "Puoi gestire gli avvisi nella schermata \"Gestisci avvisi di ricerca\".",
+	"arenella-suggestions-box-alert-text": "Aggiungi i filtri richiesti prima di creare il tuo avviso",
+	"arenella-suggestions-box-publicity-exp": "Exp",
+	"arenella-suggestions-box-publicity-hdr": "Pubblicità",
+	"arenella-suggestions-box-publicity-years": "Anni",
+	"arenella-suggestions-box-spec-extraction": "Eseguire l'estrazione",
+	"arenella-suggestions-box-spec-file": "Caricare un file",
+	"arenella-suggestions-box-spec-file-types": "Tipi di file .doc, .docx e pdf fino a 1 MB",
+	"arenella-suggestions-box-spec-hdr": "Estrai filtri",
+	"arenella-suggestions-box-spec-intro": "Scegli come caricare le specifiche del lavoro su cui filtrare",
+	"arenella-suggestions-box-spec-msg-failure": "Purtroppo non è stato possibile estrarre i filtri da questo file.",
+	"arenella-suggestions-box-spec-text": "Incolla testo",
+	"arenella-suggestions-btn-copy": "copia",
+	"arenella-suggestions-btn-create-alert": "Crea avviso",
+	"arenella-suggestions-btn-filter-by-spec": "Filtra per specifiche di lavoro",
+	"arenella-suggestions-btn-manage-alert": "Gestire gli avvisi",
+	"arenella-suggestions-btn-my-candidates": "I miei candidati",
+	"arenella-suggestions-btn-reset": "Ripristina",
+	"arenella-suggestions-contract": "Contratto",
+	"arenella-suggestions-country": "Paese",
+	"arenella-suggestions-dutch": "Olandese",
+	"arenella-suggestions-english": "Inglese",
+	"arenella-suggestions-experience": "Anni di esperienza",
+	"arenella-suggestions-french": "Francese",
+	"arenella-suggestions-inlinecv-btn-back": "Indietro",
+	"arenella-suggestions-job-title": "Titolo di lavoro",
+	"arenella-suggestions-language": "Lingue",
+	"arenella-suggestions-permanent": "Perm",
+	"arenella-suggestions-profile-box-contact-btn-send": "Inviare",
+	"arenella-suggestions-profile-box-contact-hdr": "Candidato al messaggio",
+	"arenella-suggestions-profile-box-contact-msg-failed": "Impossibile inviare il messaggio",
+	"arenella-suggestions-profile-box-contact-msg-success-1": "Messaggio inviato con successo",
+	"arenella-suggestions-profile-box-contact-msg-success-2": "Puoi visualizzare una copia del tuo messaggio e le eventuali risposte nella tua casella di posta",
+	"arenella-suggestions-profile-box-contact-title": "Titolo",
+	"arenella-suggestions-profile-box-delete-hdr": "Conferma cancellazione",
+	"arenella-suggestions-profile-box-delete-msg": "Questo profilo verrà cancellato e non sarà più possibile accedere ai dati associati",
+	"arenella-suggestions-profile-box-msg-updated": "Aggiornare",
+	"arenella-suggestions-profile-box-notes-btn-saved": "Salvo",
+	"arenella-suggestions-profile-box-notes-hdr": "Note per il candidato",
+	"arenella-suggestions-profile-btn-back": "Indietro",
+	"arenella-suggestions-profile-btn-delete": "Elimina",
+	"arenella-suggestions-profile-btn-download-cv": "Scarica CV",
+	"arenella-suggestions-profile-btn-edit": "Modificare",
+	"arenella-suggestions-profile-btn-notes": "Appunti",
+	"arenella-suggestions-profile-btn-save": "Salva candidato",
+	"arenella-suggestions-profile-btn-unsave": "Annulla salvataggio candidato",
+	"arenella-suggestions-profile-candidate-lang-accuracy": "Precisione del linguaggio",
+	"arenella-suggestions-profile-candidate-matching-skills": "Abilità corrispondenti",
+	"arenella-suggestions-profile-candidate-missing-skills": "Competenze mancanti",
+	"arenella-suggestions-profile-candidate-name": "Nome",
+	"arenella-suggestions-profile-candidate-number": "ID candidato",
+	"arenella-suggestions-profile-candidate-skill-accuracy": "Precisione delle abilità",
+	"arenella-suggestions-profile-intro-text": "Vorrei presentarmi. Mi chiamo",
+	"arenella-suggestions-profile-intro-text-2": "e io ho",
+	"arenella-suggestions-profile-intro-text-3": "anni di esperienza. Attualmente sto cercando un nuovo ruolo.",
+	"arenella-suggestions-profile-intro-text-4": "Ho sede a",
+	"arenella-suggestions-profile-introduction": "Introduzione",
+	"arenella-suggestions-saved-candidate-btn-back": "Indietro",
+	"arenella-suggestions-skills": "Competenze",
+	"arenella-suggestions-to": "A"
 }
