--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -394,5 +394,247 @@
 	"arenella-recruiter-listing-step5": "5 van 5: Vaardigheden",
 	"arenella-recruiter-listing-title": "Titel",
 	"arenella-recruiter-listing-type": "Type",
-	"arenella-recruiter-listing-views": "Keer bekeken"
+	"arenella-recruiter-listing-views": "Keer bekeken",
+	"arenella-recruiter-mp-add-belgium": "België",
+	"arenella-recruiter-mp-add-both": "Beide",
+	"arenella-recruiter-mp-add-btn-add": "Toevoegen",
+	"arenella-recruiter-mp-add-btn-back": "Terug",
+	"arenella-recruiter-mp-add-btn-create-by-spec": "Creëer op specificatie",
+	"arenella-recruiter-mp-add-btn-publish": "Publiceren",
+	"arenella-recruiter-mp-add-btn-update": "Update",
+	"arenella-recruiter-mp-add-closing-date": "Sluitingsdatum van de positie",
+	"arenella-recruiter-mp-add-comments": "Opmerkingen",
+	"arenella-recruiter-mp-add-contract": "Contract type",
+	"arenella-recruiter-mp-add-contract-type": "Contract type",
+	"arenella-recruiter-mp-add-country": "Land",
+	"arenella-recruiter-mp-add-description": "Beschrijving",
+	"arenella-recruiter-mp-add-eu": "EU",
+	"arenella-recruiter-mp-add-ireland": "Ierland",
+	"arenella-recruiter-mp-add-location": "Plaats",
+	"arenella-recruiter-mp-add-netherlands": "Nederland",
+	"arenella-recruiter-mp-add-perm": "Vaste",
+	"arenella-recruiter-mp-add-pos-]title": "Positie Titel",
+	"arenella-recruiter-mp-add-salary": "Salaris / Tarief",
+	"arenella-recruiter-mp-add-skills": "Vaardigheden",
+	"arenella-recruiter-mp-add-start-date": "Begin datum",
+	"arenella-recruiter-mp-add-title": "Voeg details toe van de functie die u via andere recruiters wilt vervullen",
+	"arenella-recruiter-mp-add-uk": "Groot-Brittannië",
+	"arenella-recruiter-mp-add-world": "Wereld",
+	"arenella-recruiter-mp-box-contact-btn-send": "Versturen",
+	"arenella-recruiter-mp-box-contact-hdr": "Stuur bericht naar recruiter",
+	"arenella-recruiter-mp-box-msg-failed": "Kan bericht niet verzenden",
+	"arenella-recruiter-mp-box-msg-success-1": "Bericht succesvol verzonden",
+	"arenella-recruiter-mp-box-msg-success-2": "U kunt een kopie van uw bericht en eventuele antwoorden bekijken in uw inbox",
+	"arenella-recruiter-mp-box-spec-upld-btn-extract": "Voer extractie uit",
+	"arenella-recruiter-mp-box-spec-upld-filetype": "Bestandstypen .doc, .docx en pdf tot 1MB",
+	"arenella-recruiter-mp-box-spec-upld-hdr": "Filters extraheren",
+	"arenella-recruiter-mp-box-spec-upld-msg-failure": "Helaas was het niet mogelijk om filters uit dit bestand te extraheren.",
+	"arenella-recruiter-mp-btn-all-roles": "Alle rollen",
+	"arenella-recruiter-mp-btn-make-request": "Verzoek indienen",
+	"arenella-recruiter-mp-btn-my-roles": "Mijn rollen",
+	"arenella-recruiter-mp-btn-request-candidate": "Kandidaat aanvragen",
+	"arenella-recruiter-mp-detils-btn-back": "Terug",
+	"arenella-recruiter-mp-detils-btn-confirm": "Bevestigen",
+	"arenella-recruiter-mp-detils-btn-delete": "Verwijderen",
+	"arenella-recruiter-mp-detils-btn-edit": "Bewerking",
+	"arenella-recruiter-mp-detils-comments": "Opmerkingen",
+	"arenella-recruiter-mp-detils-desc": "Beschrijving",
+	"arenella-recruiter-mp-offer-candidate": "Kandidaat aanbieden",
+	"arenella-recruiter-mp-offer-candidate-country": "Land",
+	"arenella-recruiter-mp-offer-candidate-desc": "Heeft u kandidaten die u momenteel niet kunt plaatsen? Wilt u deze kandidaten beschikbaar stellen?\nnaar andere recruiters tegen een door u vastgesteld tarief? Dan is deze functie iets voor jou. Voeg uw beschikbare kandidaten toe en\nandere recruiters toestaan ​​contact met u op te nemen over beschikbare projecten.",
+	"arenella-recruiter-mp-offer-candidate-firstname": "Naam",
+	"arenella-recruiter-mp-offer-candidate-role": "Rol",
+	"arenella-recruiter-mp-offer-candidate-surname": "Achternaam",
+	"arenella-recruiter-mp-open-roles": "Open rollen",
+	"arenella-recruiter-mp-roles-closing": "Sluitingsdatum",
+	"arenella-recruiter-mp-roles-country": "Land",
+	"arenella-recruiter-mp-roles-created": "Gemaakt",
+	"arenella-recruiter-mp-roles-desc": "Heeft u een functie die u momenteel niet kunt vervullen? Wilt u dat andere Recruiters contact met u opnemen?\nmet hun beschikbare kandidaten om u te helpen bij het vinden van de functie. Dan is deze functie iets voor jou. Voeg details toe\nvan de functie die u probeert te vervullen en laat andere Recruiters contact met u opnemen met geschikte kandidaten.",
+	"arenella-recruiter-mp-roles-position": "Positie",
+	"arenella-recruiter-mp-update-belgium": "België",
+	"arenella-recruiter-mp-update-both": "Beide",
+	"arenella-recruiter-mp-update-btn-add": "Toevoegen",
+	"arenella-recruiter-mp-update-closing": "Sluitingsdatum van de positie",
+	"arenella-recruiter-mp-update-comments": "Opmerkingen",
+	"arenella-recruiter-mp-update-contact-type": "Contract type",
+	"arenella-recruiter-mp-update-contract": "Contract",
+	"arenella-recruiter-mp-update-country": "Land",
+	"arenella-recruiter-mp-update-description": "Beschrijving",
+	"arenella-recruiter-mp-update-eu": "EU",
+	"arenella-recruiter-mp-update-header": "Gevraagde kandidaat bijwerken",
+	"arenella-recruiter-mp-update-ireland": "Ierland",
+	"arenella-recruiter-mp-update-location": "Plaats",
+	"arenella-recruiter-mp-update-netherlands": "Nederland",
+	"arenella-recruiter-mp-update-perm": "Vaste",
+	"arenella-recruiter-mp-update-pos-title": "Positie Titel",
+	"arenella-recruiter-mp-update-salary": "Salaris / Tarief",
+	"arenella-recruiter-mp-update-skills": "Vaardigheden",
+	"arenella-recruiter-mp-update-start": "Begin datum",
+	"arenella-recruiter-mp-update-uk": "UK",
+	"arenella-recruiter-mp-update-world": "Wereld",
+	"arenella-recruiter-mp-your-candidates": "Uw kandidaten",
+	"arenella-recruiter-prof-box-contact-btn-send": "Versturen",
+	"arenella-recruiter-prof-box-contact-desc1": "Bericht succesvol verzonden",
+	"arenella-recruiter-prof-box-contact-desc2": "U kunt een kopie van uw bericht en eventuele antwoorden bekijken in uw inbox",
+	"arenella-recruiter-prof-box-contact-failed": "Kan bericht niet verzenden",
+	"arenella-recruiter-prof-box-contact-title": "Bericht versturen",
+	"arenella-recruiter-prof-btn-back": "Terug",
+	"arenella-recruiter-prof-btn-create": "Maak een profiel aan",
+	"arenella-recruiter-prof-btn-edit": "Bewerk profiel",
+	"arenella-recruiter-prof-btn-save": "Sla op",
+	"arenella-recruiter-prof-contract-types": "Rekruteert voor de volgende contracttypen",
+	"arenella-recruiter-prof-exp": "Jaren ervaring",
+	"arenella-recruiter-prof-image": "Profielfoto",
+	"arenella-recruiter-prof-intro": "Introductie",
+	"arenella-recruiter-prof-laguages": "Talen gesproken",
+	"arenella-recruiter-prof-langs-spoken": "Talen gesproken",
+	"arenella-recruiter-prof-markets": "Rekruteert voor de volgende markten",
+	"arenella-recruiter-prof-no-account": "Maak uw profiel aan om toegang te krijgen tot de communitypagina",
+	"arenella-recruiter-prof-rec-in": "Rekruteert binnen",
+	"arenella-recruiter-prof-rec-type": "Wervingstype",
+	"arenella-recruiter-prof-recruits-in": "Rekruteert binnen",
+	"arenella-recruiter-prof-sectors": "Sectoren actief in",
+	"arenella-recruiter-prof-techs-stack": "Kerntechnologieën",
+	"arenella-recruiter-prof-title": "Functietitel",
+	"arenella-recruiter-prof-vis-can": "Zichtbaar voor kandidaten",
+	"arenella-recruiter-prof-vis-public": "Zichtbaar voor publiek",
+	"arenella-recruiter-prof-vis-rec": "Zichtbaar voor recruiters",
+	"arenella-recruiter-signup-agree": "Door u te registreren gaat u ermee akkoord dat uw gegevens in het systeem worden opgeslagen.\nUw gegevens worden niet gedeeld met derden.\nUw activiteit op de site wordt intern opgeslagen om statistieken te verstrekken en\nom uw gebruikerservaring te verbeteren.",
+	"arenella-recruiter-signup-btn-start-trial": "Gratis proefperiode starten",
+	"arenella-recruiter-signup-companyname": "Bedrijfsnaam",
+	"arenella-recruiter-signup-email": "E-mail",
+	"arenella-recruiter-signup-en": "Engels",
+	"arenella-recruiter-signup-firstname": "Voornaam",
+	"arenella-recruiter-signup-fr": "Frans",
+	"arenella-recruiter-signup-free-trial": "Gratis proefperiode",
+	"arenella-recruiter-signup-free-trial-text": "Meld u aan voor een vrijblijvende gratis proefperiode. Tijdens de proefperiode kunt u een onbeperkt aantal CV's van kandidaten downloaden, een onbeperkt aantal berichten op de vacaturebank aanmaken en een onbeperkt aantal aanvragen indienen\nvoor kandidaten van andere wervingsbureaus op de Marktplaats.",
+	"arenella-recruiter-signup-hdr1": "Maak een recruiteraccount aan",
+	"arenella-recruiter-signup-hdr2": "Meld u aan voor een vrijblijvende gratis proefperiode van 30 dagen",
+	"arenella-recruiter-signup-nl": "Nederlands",
+	"arenella-recruiter-signup-preferred-lang": "Voorkeurstaal",
+	"arenella-recruiter-signup-signup": "Aanmelden",
+	"arenella-recruiter-signup-subscription-titles": "Gratis en betaalde abonnementen",
+	"arenella-recruiter-signup-subscriptions-text1": "De site genereert inkomsten op basis van een abonnementsmodel. Nadat uw proefperiode van 30 dagen is afgelopen, kunt u de volgende keer dat u inlogt, kiezen uit een\nGratis abonnement met beperkte wekelijkse downloads, vacaturesite en marktplaatsaanvragen of voor slechts 120 euro per jaar exclusief Tax you\nhebben onbeperkt toegang tot al deze functies.",
+	"arenella-recruiter-signup-subscriptions-text2": "Het abonnement is de enige kosten die verbonden zijn aan het gebruik van de site. Er zijn geen extra kosten zoals\nmarges of commissies voor het plaatsen van kandidaten.",
+	"arenella-recruiter-signup-surname": "Achternaam",
+	"arenella-recruiter-stats-btn-refresh": "Vernieuwen",
+	"arenella-recruiter-stats-gen-active-users": "Actieve gebruikers",
+	"arenella-recruiter-stats-gen-filter-by-post": "Filter op bericht",
+	"arenella-recruiter-stats-gen-hdr": "Beschikbaarheid van kandidaten",
+	"arenella-recruiter-stats-general": "Algemeen",
+	"arenella-recruiter-stats-jb-stats": "Statistieken van de vacaturebank",
+	"arenella-recruiter-stats-jb-stats-1": "Om statistieken te bekijken, moet u minimaal één bericht op het vacaturebord aanmaken",
+	"arenella-recruiter-stats-jb-stats-2": "Om een ​​bericht aan de vacaturebank toe te voegen, kunt u de informatie handmatig invoeren of de functie 'Creëren vanuit vacaturespecificatie' gebruiken.\nHiermee wordt een functiebeschrijvingsbestand in Word- of PDF-formaat van maximaal 1 MB gescand en automatisch het bericht gegenereerd.\nU hoeft alleen maar te verifiëren dat de gegevens correct zijn en het bericht te publiceren.",
+	"arenella-recruiter-stats-jb-stats-3": "Dankzij berichten op de vacaturebank kunnen sitebezoekers rechtstreeks contact met u opnemen. Berichten worden ook gedeeld in een extern netwerk van meer dan 24.000 verbindingen\nom zoveel mogelijk kandidaten aan te trekken",
+	"arenella-recruiter-stats-jb-stats-4": "Wanneer u uw eigen berichten bekijkt, kunt u de knop 'Publiceren' gebruiken om een ​​bericht te genereren dat u kunt kopiëren en plakken op sociale media, waarin de hashtags voor de\nvaardigheden die in uw bericht zijn geselecteerd.",
+	"arenella-recruiter-stats-jb-totals": "Totalen",
+	"arenella-recruiter-stats-jb-views": "Jobboard-weergaven",
+	"arenella-recruiter-stats-jb-views-this-week": "Advertenties bekeken deze week",
+	"arenella-recruiter-stats-jb-views-today": "Advertenties vandaag bekeken",
+	"arenella-recruiter-stats-jobboard": "Jobbord",
+	"arenella-stats-added-candidates": "De volgende nieuwe kandidaten zijn toegevoegd:",
+	"arenella-stats-availability": "Beschikbaarheid",
+	"arenella-stats-availability-active-users": "Actieve gebruikers",
+	"arenella-stats-availability-totals": "Totalen",
+	"arenella-stats-btn-refresh": "Vernieuwen",
+	"arenella-stats-by-function": "Beschikbaar per functie",
+	"arenella-stats-by-function-btn-latest": "Laatste",
+	"arenella-stats-by-function-btn-todays": "Vandaag",
+	"arenella-stats-candidate-views": "Gevraagde kandidaatweergaven",
+	"arenella-stats-candidate-views-btn-today": "Vandaag",
+	"arenella-stats-candidate-views-btn-week": "Deze week",
+	"arenella-stats-daily-downloads": "Dagelijkse downloads",
+	"arenella-stats-downloads": "Downloads",
+	"arenella-stats-listings": "Advertenties",
+	"arenella-stats-logins": "Inloggen",
+	"arenella-stats-logins-btn-3-months": "3 maanden",
+	"arenella-stats-logins-btn-this-week": "Deze week",
+	"arenella-stats-logins-btn-today": "Vandaag",
+	"arenella-stats-logins-btn-week": "Week",
+	"arenella-stats-logins-btn-year": "Jaar",
+	"arenella-stats-logins-candidates": "Kandidaten",
+	"arenella-stats-logins-recruiters": "logins: Recruiters:",
+	"arenella-stats-logins-title": "Inloggen",
+	"arenella-stats-logins-user": "Gebruiker",
+	"arenella-stats-mp": "Marktplaats",
+	"arenella-stats-new-candidates": "Nieuwe kandidaten beschikbaar",
+	"arenella-stats-new-candidates-exp": "EXP",
+	"arenella-stats-new-candidates-years": "Jaren",
+	"arenella-stats-recruiter-downloads": "Recruiter-downloads",
+	"arenella-stats-recruiter-downloads-btn-today": "Vandaag",
+	"arenella-stats-recruiter-downloads-btn-week": "Deze week",
+	"arenella-stats-recruiter-downloads-totals": "Totalen",
+	"arenella-stats-recruiter-downloads-views-today": "Advertenties vandaag bekeken",
+	"arenella-stats-recruiter-downloads-views-week": "Advertenties bekeken deze week",
+	"arenella-stats-searches": "Zoekopdrachten",
+	"arenella-stats-searches-btn-today": "Vandaag",
+	"arenella-stats-searches-btn-week": "Deze week",
+	"arenella-stats-searches-country": "Land",
+	"arenella-stats-searches-function": "Functie",
+	"arenella-suggestions-add": "Toevoegen",
+	"arenella-suggestions-both": "Beide (inclusief onbekend)",
+	"arenella-suggestions-box-alert-btn-save": "Sla op",
+	"arenella-suggestions-box-alert-failure": "Helaas was het op dit moment niet mogelijk om het antwoord te verzenden.",
+	"arenella-suggestions-box-alert-hdr": "Maak Alert",
+	"arenella-suggestions-box-alert-success-1": "Uw Candidate Search Alert is succesvol aangemaakt. U ontvangt nu waarschuwingen wanneer er matchende kandidaten worden geüpload.",
+	"arenella-suggestions-box-alert-success-2": "U kunt waarschuwingen beheren in het scherm 'Zoekwaarschuwingen beheren'.",
+	"arenella-suggestions-box-alert-text": "Voeg de vereiste filters toe voordat u uw melding maakt",
+	"arenella-suggestions-box-publicity-exp": "Exp",
+	"arenella-suggestions-box-publicity-hdr": "Publiciteit",
+	"arenella-suggestions-box-publicity-years": "Jaren",
+	"arenella-suggestions-box-spec-extraction": "Voer extractie uit",
+	"arenella-suggestions-box-spec-file": "Upload bestand",
+	"arenella-suggestions-box-spec-file-types": "Bestandstypen .doc, .docx en pdf tot 1MB",
+	"arenella-suggestions-box-spec-hdr": "Filters extraheren",
+	"arenella-suggestions-box-spec-intro": "Kies hoe u de functiespecificatie wilt uploaden waarop u wilt filteren",
+	"arenella-suggestions-box-spec-msg-failure": "Helaas was het niet mogelijk om filters uit dit bestand te extraheren.",
+	"arenella-suggestions-box-spec-text": "Tekst plakken",
+	"arenella-suggestions-btn-copy": "Kopiëren",
+	"arenella-suggestions-btn-create-alert": "Maak Alert",
+	"arenella-suggestions-btn-filter-by-spec": "Filter op taakspecificatie",
+	"arenella-suggestions-btn-manage-alert": "Beheer alerts",
+	"arenella-suggestions-btn-my-candidates": "Mijn kandidaten",
+	"arenella-suggestions-btn-reset": "Opnieuw instellen",
+	"arenella-suggestions-contract": "Contract",
+	"arenella-suggestions-country": "Land",
+	"arenella-suggestions-dutch": "Nederlands",
+	"arenella-suggestions-english": "Engels",
+	"arenella-suggestions-experience": "Jaren ervaring",
+	"arenella-suggestions-french": "Frans",
+	"arenella-suggestions-inlinecv-btn-back": "Terug",
+	"arenella-suggestions-job-title": "Functietitel",
+	"arenella-suggestions-language": "Talen",
+	"arenella-suggestions-permanent": "Vaste",
+	"arenella-suggestions-profile-box-contact-btn-send": "Versturen",
+	"arenella-suggestions-profile-box-contact-hdr": "Bericht kandidaat",
+	"arenella-suggestions-profile-box-contact-msg-failed": "Kan bericht niet verzenden",
+	"arenella-suggestions-profile-box-contact-msg-success-1": "Bericht succesvol verzonden",
+	"arenella-suggestions-profile-box-contact-msg-success-2": "U kunt een kopie van uw bericht en eventuele antwoorden bekijken in uw inbox",
+	"arenella-suggestions-profile-box-contact-title": "Titel",
+	"arenella-suggestions-profile-box-delete-hdr": "Bevestig verwijderen",
+	"arenella-suggestions-profile-box-delete-msg": "Dit profiel wordt verwijderd en het is niet meer mogelijk om bij de bijbehorende gegevens te komen",
+	"arenella-suggestions-profile-box-msg-updated": "Bijwerken",
+	"arenella-suggestions-profile-box-notes-btn-saved": "Sla op",
+	"arenella-suggestions-profile-box-notes-hdr": "Opmerkingen voor kandidaat",
+	"arenella-suggestions-profile-btn-back": "Terug",
+	"arenella-suggestions-profile-btn-delete": "Verwijder",
+	"arenella-suggestions-profile-btn-download-cv": "CV downloaden",
+	"arenella-suggestions-profile-btn-edit": "Bewerking",
+	"arenella-suggestions-profile-btn-notes": "Opmerkingen",
+	"arenella-suggestions-profile-btn-save": "Kandidaat opslaan",
+	"arenella-suggestions-profile-btn-unsave": "Kandidaat niet opslaan",
+	"arenella-suggestions-profile-candidate-lang-accuracy": "Taalnauwkeurigheid",
+	"arenella-suggestions-profile-candidate-matching-skills": "Matchende vaardigheden",
+	"arenella-suggestions-profile-candidate-missing-skills": "Ontbrekende vaardigheden",
+	"arenella-suggestions-profile-candidate-name": "Naam",
+	"arenella-suggestions-profile-candidate-number": "Kandidaat-id",
+	"arenella-suggestions-profile-candidate-skill-accuracy": "Nauwkeurigheid van vaardigheden",
+	"arenella-suggestions-profile-intro-text": "Ik wil mezelf graag voorstellen. Mijn naam is",
+	"arenella-suggestions-profile-intro-text-2": "en ik heb",
+	"arenella-suggestions-profile-intro-text-3": "jaren ervaring. Momenteel ben ik op zoek naar een nieuwe rol.",
+	"arenella-suggestions-profile-intro-text-4": "Ik ben gevestigd in",
+	"arenella-suggestions-profile-introduction": "Introductie",
+	"arenella-suggestions-saved-candidate-btn-back": "Terug",
+	"arenella-suggestions-skills": "Vaardigheden",
+	"arenella-suggestions-to": "Naar"
 }
