--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -394,5 +394,247 @@
 	"arenella-recruiter-listing-step5": "5 de 5: Habilidades",
 	"arenella-recruiter-listing-title": "Título",
 	"arenella-recruiter-listing-type": "Tipo",
-	"arenella-recruiter-listing-views": "Puntos de vista"
+	"arenella-recruiter-listing-views": "Puntos de vista",
+	"arenella-recruiter-mp-add-belgium": "Bélgica",
+	"arenella-recruiter-mp-add-both": "Ambos",
+	"arenella-recruiter-mp-add-btn-add": "Agregar",
+	"arenella-recruiter-mp-add-btn-back": "Retroceder",
+	"arenella-recruiter-mp-add-btn-create-by-spec": "Crear por especificación",
+	"arenella-recruiter-mp-add-btn-publish": "Publicar",
+	"arenella-recruiter-mp-add-btn-update": "Actualizar",
+	"arenella-recruiter-mp-add-closing-date": "Fecha de cierre de posición",
+	"arenella-recruiter-mp-add-comments": "Comentarios",
+	"arenella-recruiter-mp-add-contract": "Tipo de contrato",
+	"arenella-recruiter-mp-add-contract-type": "Tipo de contrato",
+	"arenella-recruiter-mp-add-country": "País",
+	"arenella-recruiter-mp-add-description": "Descripción",
+	"arenella-recruiter-mp-add-eu": "EU",
+	"arenella-recruiter-mp-add-ireland": "Irlanda",
+	"arenella-recruiter-mp-add-location": "Ubicación",
+	"arenella-recruiter-mp-add-netherlands": "Países Bajos",
+	"arenella-recruiter-mp-add-perm": "Perm",
+	"arenella-recruiter-mp-add-pos-]title": "Título del Puesto",
+	"arenella-recruiter-mp-add-salary": "Salario / Tarifa",
+	"arenella-recruiter-mp-add-skills": "Habilidades",
+	"arenella-recruiter-mp-add-start-date": "Fecha de inicio",
+	"arenella-recruiter-mp-add-title": "Agregue detalles del puesto que desea cubrir a través de otros reclutadores",
+	"arenella-recruiter-mp-add-uk": "Reino Unido",
+	"arenella-recruiter-mp-add-world": "Mundo",
+	"arenella-recruiter-mp-box-contact-btn-send": "Enviar",
+	"arenella-recruiter-mp-box-contact-hdr": "Enviar mensaje al reclutador",
+	"arenella-recruiter-mp-box-msg-failed": "No se pudo enviar el mensaje",
+	"arenella-recruiter-mp-box-msg-success-1": "Mensaje enviado con éxito",
+	"arenella-recruiter-mp-box-msg-success-2": "Puede ver una copia de su mensaje y cualquier respuesta en su bandeja de entrada",
+	"arenella-recruiter-mp-box-spec-upld-btn-extract": "Realizar extracción",
+	"arenella-recruiter-mp-box-spec-upld-filetype": "Tipos de archivos de .doc, .docx y pdf de hasta 1 MB",
+	"arenella-recruiter-mp-box-spec-upld-hdr": "Extraer filtros",
+	"arenella-recruiter-mp-box-spec-upld-msg-failure": "Lamentablemente no fue posible extraer filtros de este archivo.",
+	"arenella-recruiter-mp-btn-all-roles": "Todos los roles",
+	"arenella-recruiter-mp-btn-make-request": "Hacer un pedido",
+	"arenella-recruiter-mp-btn-my-roles": "Mis roles",
+	"arenella-recruiter-mp-btn-request-candidate": "Solicitar candidato",
+	"arenella-recruiter-mp-detils-btn-back": "Regresa",
+	"arenella-recruiter-mp-detils-btn-confirm": "Confirmar",
+	"arenella-recruiter-mp-detils-btn-delete": "Borrar",
+	"arenella-recruiter-mp-detils-btn-edit": "Editar",
+	"arenella-recruiter-mp-detils-comments": "Comentarios",
+	"arenella-recruiter-mp-detils-desc": "Descripción",
+	"arenella-recruiter-mp-offer-candidate": "Oferta candidato",
+	"arenella-recruiter-mp-offer-candidate-country": "País",
+	"arenella-recruiter-mp-offer-candidate-desc": "¿Tiene candidatos que no puede colocar actualmente? ¿Le gustaría que estos candidatos estén disponibles?\na otros reclutadores por una tarifa fijada por usted? Si es así, esta función es para ti. Añade tus candidatos disponibles y\nPermita que otros reclutadores se comuniquen con usted con proyectos disponibles.",
+	"arenella-recruiter-mp-offer-candidate-firstname": "Nombre",
+	"arenella-recruiter-mp-offer-candidate-role": "Role",
+	"arenella-recruiter-mp-offer-candidate-surname": "Apellido",
+	"arenella-recruiter-mp-open-roles": "Roles abiertos",
+	"arenella-recruiter-mp-roles-closing": "Fecha de cierre",
+	"arenella-recruiter-mp-roles-country": "País",
+	"arenella-recruiter-mp-roles-created": "Creado",
+	"arenella-recruiter-mp-roles-desc": "¿Tiene un puesto que actualmente no puede cubrir? ¿Le gustaría que otros reclutadores pudieran contactarlo?\ncon sus candidatos disponibles para ayudarle a conseguir el puesto. Si es así, esta función es para ti. Agregar detalles\ndel puesto que está intentando cubrir y permitir que otros reclutadores se comuniquen con usted con candidatos adecuados.",
+	"arenella-recruiter-mp-roles-position": "Posición",
+	"arenella-recruiter-mp-update-belgium": "Bélgica",
+	"arenella-recruiter-mp-update-both": "Ambos",
+	"arenella-recruiter-mp-update-btn-add": "Agregar",
+	"arenella-recruiter-mp-update-closing": "Fecha de cierre de posición",
+	"arenella-recruiter-mp-update-comments": "Comentarios",
+	"arenella-recruiter-mp-update-contact-type": "Tipo de contrato",
+	"arenella-recruiter-mp-update-contract": "Contrato",
+	"arenella-recruiter-mp-update-country": "País",
+	"arenella-recruiter-mp-update-description": "Descripción",
+	"arenella-recruiter-mp-update-eu": "EU",
+	"arenella-recruiter-mp-update-header": "Candidato solicitado actualización",
+	"arenella-recruiter-mp-update-ireland": "Irlanda",
+	"arenella-recruiter-mp-update-location": "Ubicación",
+	"arenella-recruiter-mp-update-netherlands": "Países Bajos",
+	"arenella-recruiter-mp-update-perm": "Perm",
+	"arenella-recruiter-mp-update-pos-title": "Título del Puesto",
+	"arenella-recruiter-mp-update-salary": "Salario / Tarifa",
+	"arenella-recruiter-mp-update-skills": "Habilidades",
+	"arenella-recruiter-mp-update-start": "Fecha de inicio",
+	"arenella-recruiter-mp-update-uk": "UK",
+	"arenella-recruiter-mp-update-world": "Mundo",
+	"arenella-recruiter-mp-your-candidates": "Tus candidatos",
+	"arenella-recruiter-prof-box-contact-btn-send": "Enviar",
+	"arenella-recruiter-prof-box-contact-desc1": "Mensaje enviado con éxito",
+	"arenella-recruiter-prof-box-contact-desc2": "Puede ver una copia de su mensaje y cualquier respuesta en su bandeja de entrada",
+	"arenella-recruiter-prof-box-contact-failed": "No se pudo enviar el mensaje",
+	"arenella-recruiter-prof-box-contact-title": "Enviar mensaje",
+	"arenella-recruiter-prof-btn-back": "Regresa",
+	"arenella-recruiter-prof-btn-create": "Crear perfil",
+	"arenella-recruiter-prof-btn-edit": "Editar perfil",
+	"arenella-recruiter-prof-btn-save": "Guarda",
+	"arenella-recruiter-prof-contract-types": "Reclutas para los siguientes tipos de contrato",
+	"arenella-recruiter-prof-exp": "Años de experiencia",
+	"arenella-recruiter-prof-image": "Imagen de perfil",
+	"arenella-recruiter-prof-intro": "Introducción",
+	"arenella-recruiter-prof-laguages": "Idiomas hablados",
+	"arenella-recruiter-prof-langs-spoken": "Idiomas hablados",
+	"arenella-recruiter-prof-markets": "Reclutas para los siguientes mercados",
+	"arenella-recruiter-prof-no-account": "Por favor crea tu perfil para acceder a la página de la comunidad.",
+	"arenella-recruiter-prof-rec-in": "Reclutas en",
+	"arenella-recruiter-prof-rec-type": "Tipo de reclutamiento",
+	"arenella-recruiter-prof-recruits-in": "Reclutas en",
+	"arenella-recruiter-prof-sectors": "Sectores activos en",
+	"arenella-recruiter-prof-techs-stack": "Tecnologías centrales",
+	"arenella-recruiter-prof-title": "Título profesional",
+	"arenella-recruiter-prof-vis-can": "Visible para los candidatos",
+	"arenella-recruiter-prof-vis-public": "Visible al público",
+	"arenella-recruiter-prof-vis-rec": "Visible para los reclutadores",
+	"arenella-recruiter-signup-agree": "Al registrarse, usted acepta que su información se almacene en el sistema.\nTus datos no serán compartidos con terceros.\nSu actividad en el sitio se almacenará internamente para proporcionar estadísticas y\npara mejorar su experiencia de usuario.",
+	"arenella-recruiter-signup-btn-start-trial": "Empiza la prueba gratuita",
+	"arenella-recruiter-signup-companyname": "Nombre de empresa",
+	"arenella-recruiter-signup-email": "Correo electrónico",
+	"arenella-recruiter-signup-en": "Inglés",
+	"arenella-recruiter-signup-firstname": "Nombre",
+	"arenella-recruiter-signup-fr": "Francés",
+	"arenella-recruiter-signup-free-trial": "Prueba gratis",
+	"arenella-recruiter-signup-free-trial-text": "Regístrese para una prueba gratuita sin compromiso. Durante la prueba puedes descargar CV de candidatos ilimitados, crear publicaciones ilimitadas en la bolsa de trabajo y solicitudes ilimitadas\npara candidatos de otras agencias de contratación en el Marketplace.",
+	"arenella-recruiter-signup-hdr1": "Crear cuenta de reclutador",
+	"arenella-recruiter-signup-hdr2": "Regístrese para una prueba gratuita de 30 días sin compromiso",
+	"arenella-recruiter-signup-nl": "Holandés",
+	"arenella-recruiter-signup-preferred-lang": "Idioma preferido",
+	"arenella-recruiter-signup-signup": "Inscribirse",
+	"arenella-recruiter-signup-subscription-titles": "Suscripciones gratuitas y de pago",
+	"arenella-recruiter-signup-subscriptions-text1": "El sitio genera ingresos según un modelo de suscripción. Después de que finalice su prueba de 30 días, la próxima vez que inicie sesión podrá elegir entre un\nSuscripción gratuita con descargas semanales limitadas, publicaciones en bolsas de trabajo y solicitudes de mercado o por solo 120 euros al año sin incluir impuestos.\ntenga acceso a todas estas funciones sin límites.",
+	"arenella-recruiter-signup-subscriptions-text2": "La suscripción es el único coste que implica el uso del sitio. No hay costos adicionales como\nmárgenes o comisiones por la colocación de candidatos.",
+	"arenella-recruiter-signup-surname": "Apellido",
+	"arenella-recruiter-stats-btn-refresh": "Actualizar",
+	"arenella-recruiter-stats-gen-active-users": "Usuarios activos",
+	"arenella-recruiter-stats-gen-filter-by-post": "Filtrar por publicación",
+	"arenella-recruiter-stats-gen-hdr": "Disponibilidad de candidatos",
+	"arenella-recruiter-stats-general": "General",
+	"arenella-recruiter-stats-jb-stats": "Estadísticas de la bolsa de trabajo",
+	"arenella-recruiter-stats-jb-stats-1": "Para ver las estadísticas necesitarás crear al menos una publicación en la bolsa de trabajo.",
+	"arenella-recruiter-stats-jb-stats-2": "Para agregar una publicación a la bolsa de trabajo, puede ingresar la información manualmente o usar la función \"Crear a partir de especificaciones de trabajo\".\nEsto escaneará un archivo de descripción del trabajo en formato Word o PDF de hasta 1 MB de tamaño y generará automáticamente la publicación.\nSimplemente necesitarás verificar que los detalles sean correctos y publicar la publicación.",
+	"arenella-recruiter-stats-jb-stats-3": "Las publicaciones en la bolsa de trabajo permiten a los visitantes del sitio comunicarse con usted directamente. Las publicaciones también se comparten en una red externa de más de 24.000 conexiones.\npara atraer tantos candidatos como sea posible",
+	"arenella-recruiter-stats-jb-stats-4": "Cuando ves tus propias publicaciones, puedes usar el botón 'Publicar' para generar un mensaje para copiar y pegar en las redes sociales que contiene los hashtags de las\nHabilidades seleccionadas en tu publicación.",
+	"arenella-recruiter-stats-jb-totals": "Totales",
+	"arenella-recruiter-stats-jb-views": "Vistas de la bolsa de trabajo",
+	"arenella-recruiter-stats-jb-views-this-week": "Anuncios vistos esta semana",
+	"arenella-recruiter-stats-jb-views-today": "Anuncios vistos hoy",
+	"arenella-recruiter-stats-jobboard": "Bolsa de trabajo",
+	"arenella-stats-added-candidates": "Se han añadido los siguientes nuevos candidatos:",
+	"arenella-stats-availability": "Disponibilidad",
+	"arenella-stats-availability-active-users": "Usuarios activos",
+	"arenella-stats-availability-totals": "Totales",
+	"arenella-stats-btn-refresh": "Actualizar",
+	"arenella-stats-by-function": "Disponible por función",
+	"arenella-stats-by-function-btn-latest": "El último",
+	"arenella-stats-by-function-btn-todays": "Hoy",
+	"arenella-stats-candidate-views": "Vistas de candidatos solicitadas",
+	"arenella-stats-candidate-views-btn-today": "Hoy",
+	"arenella-stats-candidate-views-btn-week": "Esta semana",
+	"arenella-stats-daily-downloads": "Descargas diarias",
+	"arenella-stats-downloads": "Descargas",
+	"arenella-stats-listings": "Listados",
+	"arenella-stats-logins": "Inicios de sesión",
+	"arenella-stats-logins-btn-3-months": "3 meses",
+	"arenella-stats-logins-btn-this-week": "Questa settimana",
+	"arenella-stats-logins-btn-today": "Hoy",
+	"arenella-stats-logins-btn-week": "Semana",
+	"arenella-stats-logins-btn-year": "Año",
+	"arenella-stats-logins-candidates": "Candidatos",
+	"arenella-stats-logins-recruiters": "Inicios de sesión: Reclutadores:",
+	"arenella-stats-logins-title": "Inicios de sesión",
+	"arenella-stats-logins-user": "Usuario",
+	"arenella-stats-mp": "Mercado",
+	"arenella-stats-new-candidates": "Nuevos candidatos disponibles",
+	"arenella-stats-new-candidates-exp": "EXP",
+	"arenella-stats-new-candidates-years": "Años",
+	"arenella-stats-recruiter-downloads": "Descargas de reclutador",
+	"arenella-stats-recruiter-downloads-btn-today": "Hoy",
+	"arenella-stats-recruiter-downloads-btn-week": "Esta semana",
+	"arenella-stats-recruiter-downloads-totals": "Totales",
+	"arenella-stats-recruiter-downloads-views-today": "Anuncios vistos hoy",
+	"arenella-stats-recruiter-downloads-views-week": "Anuncios vistos esta semana",
+	"arenella-stats-searches": "Búsquedas",
+	"arenella-stats-searches-btn-today": "Hoy",
+	"arenella-stats-searches-btn-week": "Esta semana",
+	"arenella-stats-searches-country": "País",
+	"arenella-stats-searches-function": "Función",
+	"arenella-suggestions-add": "Agregar",
+	"arenella-suggestions-both": "Ambos (incluye desconocido)",
+	"arenella-suggestions-box-alert-btn-save": "Guarda",
+	"arenella-suggestions-box-alert-failure": "Lamentablemente no fue posible enviar la respuesta en este momento.",
+	"arenella-suggestions-box-alert-hdr": "Crear alerta",
+	"arenella-suggestions-box-alert-success-1": "Su alerta de búsqueda de candidatos se creó correctamente. Ahora recibirá alertas cuando se carguen candidatos coincidentes.",
+	"arenella-suggestions-box-alert-success-2": "Puede administrar alertas en la pantalla 'Administrar alertas de búsqueda'.",
+	"arenella-suggestions-box-alert-text": "Agregue los filtros requeridos antes de crear su alerta",
+	"arenella-suggestions-box-publicity-exp": "Exp",
+	"arenella-suggestions-box-publicity-hdr": "Publicidad",
+	"arenella-suggestions-box-publicity-years": "Años",
+	"arenella-suggestions-box-spec-extraction": "Realizar extracción",
+	"arenella-suggestions-box-spec-file": "Subir archivo",
+	"arenella-suggestions-box-spec-file-types": "Tipos de archivos de .doc, .docx y pdf de hasta 1 MB",
+	"arenella-suggestions-box-spec-hdr": "Extraer filtros",
+	"arenella-suggestions-box-spec-intro": "Elija cómo cargar la especificación del trabajo para filtrar",
+	"arenella-suggestions-box-spec-msg-failure": "Lamentablemente no fue posible extraer filtros de este archivo.",
+	"arenella-suggestions-box-spec-text": "Pegar texto",
+	"arenella-suggestions-btn-copy": "Copiar",
+	"arenella-suggestions-btn-create-alert": "Crear alerta",
+	"arenella-suggestions-btn-filter-by-spec": "Filtrar por especificación de trabajo",
+	"arenella-suggestions-btn-manage-alert": "Administrar alertas",
+	"arenella-suggestions-btn-my-candidates": "Mis candidatos",
+	"arenella-suggestions-btn-reset": "Reiniciar",
+	"arenella-suggestions-contract": "contrato ",
+	"arenella-suggestions-country": "País",
+	"arenella-suggestions-dutch": "Holandés",
+	"arenella-suggestions-english": "Inglés",
+	"arenella-suggestions-experience": "Años de experiencia",
+	"arenella-suggestions-french": "Francés",
+	"arenella-suggestions-inlinecv-btn-back": "Regresa",
+	"arenella-suggestions-job-title": "Título profesional",
+	"arenella-suggestions-language": "Idiomas",
+	"arenella-suggestions-permanent": "Perm",
+	"arenella-suggestions-profile-box-contact-btn-send": "Enviar",
+	"arenella-suggestions-profile-box-contact-hdr": "Mensaje candidato",
+	"arenella-suggestions-profile-box-contact-msg-failed": "No se pudo enviar el mensaje",
+	"arenella-suggestions-profile-box-contact-msg-success-1": "Mensaje enviado con éxito",
+	"arenella-suggestions-profile-box-contact-msg-success-2": "Puede ver una copia de su mensaje y cualquier respuesta en su bandeja de entrada",
+	"arenella-suggestions-profile-box-contact-title": "Título",
+	"arenella-suggestions-profile-box-delete-hdr": "Confirmar eliminación",
+	"arenella-suggestions-profile-box-delete-msg": "Este perfil será eliminado y ya no será posible acceder a los datos asociados",
+	"arenella-suggestions-profile-box-msg-updated": "Actualizar",
+	"arenella-suggestions-profile-box-notes-btn-saved": "Guarda",
+	"arenella-suggestions-profile-box-notes-hdr": "Notas para el candidato",
+	"arenella-suggestions-profile-btn-back": "Regresa",
+	"arenella-suggestions-profile-btn-delete": "Borrar",
+	"arenella-suggestions-profile-btn-download-cv": "Descargar CV",
+	"arenella-suggestions-profile-btn-edit": "Editar",
+	"arenella-suggestions-profile-btn-notes": "Notas",
+	"arenella-suggestions-profile-btn-save": "Guardar candidato",
+	"arenella-suggestions-profile-btn-unsave": "Candidato no guardar",
+	"arenella-suggestions-profile-candidate-lang-accuracy": "Precisión del lenguaje",
+	"arenella-suggestions-profile-candidate-matching-skills": "Habilidades de combinación",
+	"arenella-suggestions-profile-candidate-missing-skills": "Habilidades faltantes",
+	"arenella-suggestions-profile-candidate-name": "Nombre",
+	"arenella-suggestions-profile-candidate-number": "ID del candidato",
+	"arenella-suggestions-profile-candidate-skill-accuracy": "Precisión de habilidad",
+	"arenella-suggestions-profile-intro-text": "Me gustaría presentarme. Mi nombre es",
+	"arenella-suggestions-profile-intro-text-2": "y yo tengo",
+	"arenella-suggestions-profile-intro-text-3": "Años de experiencia. Actualmente estoy buscando un nuevo rol.",
+	"arenella-suggestions-profile-intro-text-4": "estoy basado en",
+	"arenella-suggestions-profile-introduction": "Introducción",
+	"arenella-suggestions-saved-candidate-btn-back": "Regreso",
+	"arenella-suggestions-skills": "Habilidades",
+	"arenella-suggestions-to": "A"
 }
